--- a/localisation/braz_por/MD_defence_companies_l_braz_por.yml
+++ b/localisation/braz_por/MD_defence_companies_l_braz_por.yml
@@ -287,3 +287,4 @@
  USA_sikorsky_aircraft_tank_manufacturer: "Sikorsky Aircraft"
  USA_united_defense_tank_manufacturer: "United Defense"
  USA_textron_tank_manufacturer: "Textron"
+ GER_panavia_aircraft_manufacturer: "Panavia Aircraft Germany"
