--- a/localisation/braz_por/MD_focus_CES_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CES_l_braz_por.yml
@@ -1290,3 +1290,4 @@
  UZB_karakalpakstan.4.d: "Enquanto os Karakalpaks locais celebravam seu feriado nacional, os uzbeques radicalizados atacaram os celebrantes. Várias pessoas ficaram feridas e os agressores foram detidos pela polícia. Como devemos lidar com isso?"
  UZB_karakalpakstan.4.a: "De volta aos Karakalpaks"
  UZB_karakalpakstan.4.b: "De volta aos uzbeques"
+ Karakalpaks_rebelled_yes: "Karakalpaquistão rebelou-se"
