--- a/localisation/braz_por/MD_focus_DEN_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_DEN_l_braz_por.yml
@@ -1405,7 +1405,7 @@
  DEN_Regimental_Doctors: "Médicos Regimentais da Defesa"
  DEN_Civilian_Education: "Educação Civil da Defesa"
  DEN_Dental_Plan: "Plano Dentário da Defesa"
- DEN_army_dynamic_modifier: "Forças de Defesa Dinamarquesas"
+ DEN_army_dynamic_modifier: "Forsvaret"
  DEN_Danish_Defence_Force: "Forças de Defesa Dinamarquesas"
  DEN_Danish_Defence_Force_desc: "O Exército Dinamarquês é o componente terrestre da Defesa Dinamarquesa e é responsável por defender a Dinamarca e seus interesses tanto no país quanto internacionalmente. Foi fundado em 1614 e possui uma longa história de serviço militar."
  DEN_Dental_Plan_Add_tt: "Modificadores §YForças de Defesa Dinamarquesas§! \nOrganização de Divisão: §G+10%§! \nMultiplicador de Custo Militar: §R+2%§!"
@@ -1473,7 +1473,7 @@
  DEN_terrain_penalty_reduction_tt: "Modifica a §YRedução de Penalidade de Terreno§! para o §HForsvaret§! em [?DEN_terrain_penalty_reduction_change|+%] (Atual: [?DEN_terrain_penalty_reduction|Y%])"
  DEN_navy_fuel_consumption_factor_tt: "Modifica o §YConsumo de Combustível Naval§! para o §HForsvaret§! em [?DEN_navy_fuel_consumption_factor_change|-%] (Atual: [?DEN_navy_fuel_consumption_factor|Y%])"
  DEN_equipment_cost_multiplier_modifier_tt: "Modifica o §Ycusto do Equipamento§! para §HForsvaret§! por [?DEN_equipment_cost_multiplier_modifier_change|-%] (Atual: [?DEN_equipment_cost_multiplier_modifier|Y%])"
- DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifica o §YCusto da Administração§! para §HForsvaret§! por [?DEN_bureaucracy_cost_multiplier_modifier_change|-%] (Atual: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
+ DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HKingdom of Denmark§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|+%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "Modifica a §YProdutividade das Fábricas Militares§! para §HForsvaret§! por [?DEN_military_factories_productivity_change|-%] (Atual: [?DEN_military_factories_productivity|Y%])"
  DEN_dockyard_productivity_tt: "Modifica a §YProdutividade dos Estaleiros§! para §HForsvaret§! por [?DEN_dockyard_productivity_change|-%] (Atual: [?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "Modifica a §YPopulação Mensal§! para §HReino da Dinamarca§! por [?DEN_monthly_population_change|+%] (Atual: [?DEN_monthly_population|Y%])"
@@ -1681,3 +1681,7 @@
  DEN_water_conservation_decision: "Subsídios para Conservação da Água"
  DEN_marine_conservation_decision: "Subsídios para Conservação Marinha"
  DEN_Protest: "Protestos do Povo"
+ DEN_police_cost_multiplier_modifier_tt: "Modifies §YPolice Cost§! for §HKingdom of Denmark§! by [?DEN_police_cost_multiplier_modifier_change|+%] (Current: [?DEN_police_cost_multiplier_modifier|Y%])"
+ DEN_education_cost_multiplier_modifier_tt: "Modifies §YEducation Cost§! for §HKingdom of Denmark§! by [?DEN_education_cost_multiplier_modifier_change|+%] (Current: [?DEN_education_cost_multiplier_modifier|Y%])"
+ DEN_health_cost_multiplier_modifier_tt: "Modifies §YHealthcare Cost§! for §HKingdom of Denmark§! by [?DEN_health_cost_multiplier_modifier_change|+%] (Current: [?DEN_health_cost_multiplier_modifier|Y%])"
+ DEN_social_cost_multiplier_modifier_tt: "Modifies §YSocial Spendings§! for §HKingdom of Denmark§! by [?DEN_social_cost_multiplier_modifier_change|+%] (Current: [?DEN_social_cost_multiplier_modifier|Y%])"
