--- a/localisation/braz_por/MD_focus_SUB_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SUB_l_braz_por.yml
@@ -2186,7 +2186,7 @@
  CHE_battalion_yug_tt: "§YO batalhão de rifles motorizados \"Yug\"§! será criado no território da Chechênia"
  CHE_battalion_sever_tt: "§YBatalhão de rifles motorizados \"Sever\"§! será criado no território da Chechênia"
  CHE_battalion_ahmat_sever_tt: "§YBatalhão de rifles motorizados \"Ahmat-Sever\"§! será criado no território da Chechênia"
- CHE_battalions_ahmat_tt: "§YMotorized rifle battalions \"Ahmat-Yug\"\"Ahmat-Zapad\" and \"Ahmat-Vostok\"§! will be created on the territory of Chechnya"
+ CHE_battalions_ahmat_tt: "§YBatalhões de rifles motorizados \"Ahmat-Yug\", \"Ahmat-Zapad\" e \"Ahmat-Vostok\"§! serão criados no território da Chechênia"
  CHE_battalions_ahmat_other_tt: "§YBatalhões de rifles motorizados \"Ahmat-Chechnya\" e \"Ahmat-Russia\"§! serão criados no território da Chechênia"
  CHE_battalions_ahmat_other2_tt: "Novos batalhões chegarão ao nosso exército"
  CHE_battalions_vostok_tt: "§YO Batalhão Vostok§! será criado no território da Chechênia"
