--- a/localisation/braz_por/MD_new_traits_l_braz_por.yml
+++ b/localisation/braz_por/MD_new_traits_l_braz_por.yml
@@ -148,9 +148,7 @@
  nationalist_Nat_Populism: "Ideologia: Nacionalista Populista"
  nationalist_Monarchist: "Ideologia: Monarquista"
  polish_president: "Presidente da Polônia"
- diplomat: "Diplomata"
- union_man: "Sindicalista"
- educator: "Educador"
+ diplomat: "Background: Diplomat"
  afghanistan_lion_of_panjshir: "Leão de Panjshir"
  emperor_of_japan: "Imperador do Japão"
  former_armor_commander: "Ex-Comandante de Blindados"
@@ -189,3 +187,15 @@
  aviation_engineer: "Background: Aviation Engineer"
  substance_abuser: "Substance Abuser"
  playboy_lifestyle: "Playboy Lifestyle"
+ pro_east_africa: "Pro East Africa"
+ farmer: "Background: Farmer"
+ ex_engineer: "Background: Ex-Engineer"
+ ex_engineer_desc: "This person has experience as an engineer and is quite familiar with engineering design projects."
+ diplomat_desc: "He once served as a diplomat and is skilled in handling international affairs."
+ farmer_desc: "As a former farmer, he is familiar with the entire agricultural operation."
+ aviation_engineer_desc: "As an aviation engineer, this person has unique insights into the entire aviation system."
+ spy_desc: "He used to be an intelligence officer, but nothing else is known about him."
+ economist_desc: "As an economist, he has unique insights into the operation of the market and the control of capital."
+ substance_abuser_desc: "His addiction to drugs is a serious problem for his mental health."
+ playboy_lifestyle_desc: "He had bang with more beautiful women than I've ever seen."
+ IRGC_Member_desc: "Member of Revolutionary Guards, faithful to Faqih's guardianship"
