--- a/localisation/braz_por/events_l_braz_por.yml
+++ b/localisation/braz_por/events_l_braz_por.yml
@@ -995,7 +995,7 @@
  korea.29.t: "China solicita a entrega dos restos mortais do pessoal do Exército de Voluntários Populares do Povo da China da Coreia do Sul para a China"
  korea.29.d: ""
  korea.29.a: "É claro que vamos. Respeitamos esses soldados."
- korea.29.b: "Eles são nossos inimigos e invasores de nossa terra! Não podemos aceitar isso!"
+ korea.29.b: "Eles são nossos inimigos e invasores da nossa terra! Não podemos aceitar isso!"
  korea.30.t: "Primeira Transferência de Restos Mortais dos Soldados do Exército de Voluntários Populares da China da ROK para a China"
  korea.30.d: "\nA primeira coleta consistiu em restos mortais encontrados por meio de escavações em múltiplas regiões como a Província de Gangwon e a Província de Gyeonggi. Muitos dos restos mortais eram não identificáveis. A primeira coleta foi inicialmente estimada para conter os restos mortais de 425 soldados, mas essa estimativa foi posteriormente aumentada para 437.\n\nChina e Coreia do Sul realizaram uma cerimônia de entrega desses restos mortais na Coreia no Aeroporto Internacional de Incheon. Representantes chineses e coreanos assinaram a carta de entrega lá. O lado coreano enviou vinte e dois veículos para transferir os restos mortais. Após os aviões especiais da Força Aérea Chinesa entrarem no espaço aéreo da China, dois J-11s vieram para escoltar."
  korea.30.a: "Saudação!"
