--- a/localisation/braz_por/plane_designer_l_braz_por.yml
+++ b/localisation/braz_por/plane_designer_l_braz_por.yml
@@ -228,12 +228,12 @@
  rocket_weapons_1_desc: "Os primeiros pods de foguetes permitiram que as aeronaves tivessem um método rápido para engajar alvos com uma saturação precisa de ogivas explosivas de alto poder, por um preço significativamente mais baixo do que armamentos guiados."
  rocket_weapons_2: "Foguetes Não Guiados Modernos"
  rocket_weapons_2_desc: "Foguetes mais precisos e avanços nas ogivas tornaram esses sistemas de armas um avanço significativo em relação aos seus equivalentes anteriores, ao mesmo tempo em que continuavam sendo uma maneira barata e eficaz de fornecer suporte aéreo próximo e capacidades de missões de ataque aéreo a aeronaves."
- countermeasures_1: "Contra-Medidas Iniciais"
- countermeasures_1_desc: "À medida que os mísseis entravam em cena, as aeronaves precisavam de uma maneira de se defender contra ataques que não dependessem apenas de tentar superar ou desviar de um míssil. Chaff e flares forneciam engodos que permitiam que os pilotos tentassem enganar ameaças de mísseis entrantes."
- countermeasures_2: "Contra-Medidas Modernas"
- countermeasures_2_desc: "À medida que os computadores ficavam mais inteligentes e rápidos, tornou-se mais simples automatizar certas tarefas em uma aeronave. Com esses sistemas, as aeronaves podem automaticamente executar um programa para implantar contra-medidas quando sob ataque, no momento ótimo para maximizar sua chance de evitar o ataque."
- countermeasures_3: "Contra-Medidas Defensivas de Guerra Eletrônica"
- countermeasures_3_desc: "À medida que o combate BVR se tornou dominante, a capacidade de impedir que seu oponente o veja ou trave em você se tornou cada vez mais crucial. Pods de interferência e jammers internos permitem que aeronaves parem o radar inimigo de detectá-los ou travá-los, preenchendo seu radar com falsos retornos, exigindo grandes quantidades de energia para serem superados."
+ countermeasures_1: "Countermeasures and early RWR"
+ countermeasures_1_desc: "As missiles jumped onto the scene, aircraft needed a way to defend themselves from attack that didn't rely on trying to just outrun or dodge a missile. Chaff and flares provided decoys that allowed pilots to attempt to deceive incoming missile threats while Radar Warning Receivers alerted the pilot when his plane was locked by a radar."
+ countermeasures_2: "Countermeasures and modern RWR"
+ countermeasures_2_desc: "While countermeasures didn't change much, modern RWR now display crucial information such as the type of radar, the distance. Modern missile warning systems can also deploy countermeasures automatically when detecting a missile."
+ countermeasures_3: "Electronic Warfare Suite"
+ countermeasures_3_desc: "Planes can now carry their own advanced eletronic warfare equipment without having to rely on dedicated jamming aircrafts. These powerful systems provide unparalleled protection against ever more lethal threats. Multispectrum flares provides further protection against modern IR missiles."
  countermeasures_4: "Contra-Medidas de Destruição Laser"
  countermeasures_4_desc: "À medida que as ameaças de mísseis se tornaram mais difíceis de enganar, a missão mudou de esquiva para destruição. Esses sistemas montados em aeronaves usam lasers de alta potência para desabilitar os sistemas de orientação em um míssil entrante, ou para detonar a ogiva antes que ela atinja seu alvo."
  rapid_dragon: "ALCMs Palletizados"
@@ -523,12 +523,12 @@
  spec_thrust_vector_2_desc: "Sistemas de vetorização de empuxo projetados para aumentar a manobrabilidade.\n\n§GDica do Designer: Use este módulo para aumentar a defesa aérea de uma aeronave, com o custo de confiabilidade. Recomendado quando você deseja criar uma aeronave mais durável sem pagar pelos custos de stealth.§!"
  spec_thrust_vector_3: "Vetorização de Empuxo em Eixos Duplos"
  spec_thrust_vector_3_desc: "Vetorização avançada de empuxo que permite uma maior manobrabilidade em vários eixos.\n\n§GDica do Designer: Use este módulo para aumentar a defesa aérea de uma aeronave, ao custo da confiabilidade. Recomendado quando você deseja criar uma aeronave mais resistente sem pagar pelos custos de stealth.§!"
- spec_countermeasures_1: "Contramedidas Iniciais"
+ spec_countermeasures_1: "Countermeasures and early RWR"
  spec_countermeasures_1_desc: "Opções defensivas iniciais contra ataques de mísseis.\n\n§GDica do Designer: Aumento geral na estatística de defesa aérea de uma aeronave. É recomendado ter pelo menos um módulo de contramedidas em uma aeronave, especialmente se ela não tiver nenhum módulo de stealth.§!"
- spec_countermeasures_2: "Contramedidas Automatizadas"
+ spec_countermeasures_2: "Countermeasures and modern RWR"
  spec_countermeasures_2_desc: "Sistema automatizado de detecção e liberação de Chaff e Flares.\n\n§GDica do Designer: Aumento geral na estatística de defesa aérea de uma aeronave. É recomendado ter pelo menos um módulo de contramedidas em uma aeronave, especialmente se ela não tiver nenhum módulo de stealth.§!"
- spec_countermeasures_3: "Pod de Interferência Radar"
- spec_countermeasures_3_desc: "Defesa contra mísseis EW guiados por radar.\n\n§GDica do Designer: Aumento geral na estatística de defesa aérea de uma aeronave, juntamente com um aumento na vantagem do radar. É recomendado ter pelo menos um módulo de contramedidas em uma aeronave, especialmente se ela não tiver nenhum módulo de stealth.§!"
+ spec_countermeasures_3: "Electronic Warfare Suite"
+ spec_countermeasures_3_desc: "EW Suite.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat, along with an increase to radar advantage. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
  spec_countermeasures_4: "Sistema de Anulação a Laser"
  spec_countermeasures_4_desc: "Contramedidas de anulação para proteção contra todas as ameaças de mísseis.\n\n§GDica do Designer: Aumento geral na estatística de defesa aérea de uma aeronave, juntamente com um aumento na vantagem do radar. É recomendado ter pelo menos um módulo de contramedidas em uma aeronave, especialmente se ela não tiver nenhum módulo de stealth.§!"
  engine_light_single_1: "Motor Leve Inicial"
