--- a/localisation/french/MD_focus_DEN_l_french.yml
+++ b/localisation/french/MD_focus_DEN_l_french.yml
@@ -1375,7 +1375,7 @@
  DEN_Regimental_Doctors: "The Defence's Regimental Doctors"
  DEN_Civilian_Education: "The Defence Civilian Education"
  DEN_Dental_Plan: "The Defence Dental Plan"
- DEN_army_dynamic_modifier: "Danish Defence Force"
+ DEN_army_dynamic_modifier: "Forsvaret"
  DEN_Danish_Defence_Force: "Danish Defence Force"
  DEN_Danish_Defence_Force_desc: "The Danish Army is the ground force component of the Danish Defense and is responsible for defending Denmark and its interests both domestically and internationally. It was founded in 1614 and has a long history of military service."
  DEN_Dental_Plan_Add_tt: "Modifers §YDanish Defence Force§! \nDivision Organization: §G+10%§! \nMilitary Cost Muliplier: §R+2%§!"
@@ -1443,7 +1443,7 @@
  DEN_terrain_penalty_reduction_tt: "Modifies §YTerrain Penalty Reduction§! for §HForsvaret§! by [?DEN_terrain_penalty_reduction_change|+%] (Current: [?DEN_terrain_penalty_reduction|Y%])"
  DEN_navy_fuel_consumption_factor_tt: "Modifies §YNavy Fuel Consumption§! for §HForsvaret§! by [?DEN_navy_fuel_consumption_factor_change|-%] (Current: [?DEN_navy_fuel_consumption_factor|Y%])"
  DEN_equipment_cost_multiplier_modifier_tt: "Modifies §YEquipment cost§! for §HForsvaret§! by [?DEN_equipment_cost_multiplier_modifier_change|-%] (Current: [?DEN_equipment_cost_multiplier_modifier|Y%])"
- DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HForsvaret§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|-%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
+ DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HKingdom of Denmark§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|+%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "Modifies §YMilitary Factories Productivity§! for §HForsvaret§! by [?DEN_military_factories_productivity_change|-%] (Current: [?DEN_military_factories_productivity|Y%])"
  DEN_dockyard_productivity_tt: "Modifies §YDockyard Productivity§! for §HForsvaret§! by [?DEN_dockyard_productivity_change|+%] (Current: [?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "Modifies §YMonthly Population§! for §HKingdom of Denmark§! by [?DEN_monthly_population_change|+%] (Current: [?DEN_monthly_population|Y%])"
@@ -1681,3 +1681,7 @@
  DEN_water_conservation_decision: "Water conservation Subsidies"
  DEN_marine_conservation_decision: "Marine conservation Subsidies"
  DEN_Protest: "Protests of the People"
+ DEN_police_cost_multiplier_modifier_tt: "Modifies §YPolice Cost§! for §HKingdom of Denmark§! by [?DEN_police_cost_multiplier_modifier_change|+%] (Current: [?DEN_police_cost_multiplier_modifier|Y%])"
+ DEN_education_cost_multiplier_modifier_tt: "Modifies §YEducation Cost§! for §HKingdom of Denmark§! by [?DEN_education_cost_multiplier_modifier_change|+%] (Current: [?DEN_education_cost_multiplier_modifier|Y%])"
+ DEN_health_cost_multiplier_modifier_tt: "Modifies §YHealthcare Cost§! for §HKingdom of Denmark§! by [?DEN_health_cost_multiplier_modifier_change|+%] (Current: [?DEN_health_cost_multiplier_modifier|Y%])"
+ DEN_social_cost_multiplier_modifier_tt: "Modifies §YSocial Spendings§! for §HKingdom of Denmark§! by [?DEN_social_cost_multiplier_modifier_change|+%] (Current: [?DEN_social_cost_multiplier_modifier|Y%])"
