--- a/localisation/french/MD_new_traits_l_french.yml
+++ b/localisation/french/MD_new_traits_l_french.yml
@@ -177,9 +177,7 @@
  certified_nationalist: "Nationaliste certifié"
  anti_west: "Haineux de l'Occident"
  anti_west_desc: "La haine de l'Occident est dans son sang"
- diplomat: "Diplomate"
- union_man: "L'homme de l'Union"
- educator: "Éducateur"
+ diplomat: "Contexte : Diplomate"
  railroad_enthusiast: "Passionné de Chemins de Fer"
  railroad_enthusiast_desc: "Passionné par les chemins de fer et leur fonctionnement."
  logistical_tunnel_vision: "Vision Tunnelisée Logistique"
@@ -189,3 +187,15 @@
  aviation_engineer: "Expérience : Ingénieur aéronautique"
  substance_abuser: "Toxicomane"
  playboy_lifestyle: "Mode de vie de Playboy"
+ pro_east_africa: "Pro Afrique de l’Est"
+ farmer: "Contexte : agriculteur"
+ ex_engineer: "Parcours : Ex-Ingénieur"
+ ex_engineer_desc: "Cette personne possède de l’expérience en tant qu’ingénieur et connaît bien les projets de conception technique."
+ diplomat_desc: "Il a autrefois été diplomate et est compétent dans la gestion des affaires internationales."
+ farmer_desc: "En tant qu'ancien agriculteur, il connaît l'ensemble de l'exploitation agricole."
+ aviation_engineer_desc: "En tant qu’ingénieur aéronautique, cette personne possède une vision unique de l’ensemble du système aéronautique."
+ spy_desc: "Il était officier du renseignement, mais on ne sait rien d’autre de lui."
+ economist_desc: "En tant qu'économiste, il possède une vision unique du fonctionnement du marché et du contrôle du capital."
+ substance_abuser_desc: "Sa dépendance aux drogues constitue un grave problème pour sa santé mentale."
+ playboy_lifestyle_desc: "Il a eu des relations avec des femmes plus belles que je n'en ai jamais vu."
+ IRGC_Member_desc: "Membre des Gardiens de la Révolution, fidèle à la tutelle du Faqih"
