--- a/localisation/french/tank_modules_l_french.yml
+++ b/localisation/french/tank_modules_l_french.yml
@@ -467,8 +467,6 @@
  smoke_launchers_desc: "Ensemble de lanceurs de fumée destinés à couvrir le véhicule du feu ennemi direct.\n\n§GConseil de conception : L'ajout de lanceurs de fumée réduit la visibilité de notre char, le rendant meilleur à la fois en défense et en attaque§!"
  smoke_launchers_2: "Lanceurs de Fumée Améliorés"
  smoke_launchers_2_desc: "La formule chimique améliorée couvre également le véhicule des viseurs infrarouges.\n\n§GConseil de conception : L'ajout de lanceurs de fumée réduit la visibilité de notre char, le rendant meilleur à la fois en défense et en attaque§!"
- smoke_launchers_3: "Fumée moderne et système d'alerte laser"
- smoke_launchers_3_desc: "Le système d'avertissement laser alerte l'équipage lorsque le véhicule est ciblé par un missile à guidage laser ou un contrôle de tir de char.\n\n§GConseil de conception : L'ajout de lanceurs de fumée réduit la visibilité de notre char, le rendant meilleur à la fois en défense et en attaque§!"
  reactive_armor_gen1: "Blindage Réactif Explosif de 1ère Génération"
  reactive_armor_gen1_desc: "Le Blindage réactif explosif (BRE) est composé de briques faites d'explosifs sur un cadre métallique installé sur le char. Lorsque la brique est frappée par un pénétrateur cinétique ou une charge formée, la brique explose, contrant le projectile entrant. Les premières expériences ont été faites dans les années 60 pour contrer les premières charges formées, mais aucune n'a été mise en production.\n\n§GConseil de conception : Le Blindage Réactif Explosif (BRE) est un moyen facile d'améliorer le blindage de votre char§!"
  reactive_armor_gen2: "Blindage Réactif Explosif de 2ème Génération"
@@ -987,8 +985,6 @@
  SOV_smoke_launchers_desc: "Tucha is an 81 mm vehicle-mounted grenade launcher developed in the Soviet Union. It is mainly used to fire the 3D6 and 3D6M type smoke grenades.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
  SOV_smoke_launchers_2: "3D17"
  SOV_smoke_launchers_2_desc: "Tucha is an 81 mm vehicle-mounted grenade launcher developed in the Soviet Union. It is mainly used to fire the 3D6 and 3D6M type smoke grenades.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
- SOV_smoke_launchers_3: "Shtora-1"
- SOV_smoke_launchers_3_desc: "The Shtora-1 'electro-optical active protection system' is an advanced smoke launcher device. It fires the 3D17 smoke grenade, which smokes via red phosphorous. The smoke burns hot enough to mask the tank from thermal imaging.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
  SOV_hardkill_system_gen1: "Arena"
  SOV_hardkill_system_gen1_desc: "The Arena active protection system uses doppler radar to detect incoming missiles. Once a missile is detected, the system fires a rocket to counter the missile.\n\n§GDesigner Hint: A hard-kill system is a good way to bolster our tanks armour to be stronger§!"
  SOV_hardkill_system_gen2: "Afganit"
@@ -1066,7 +1062,6 @@
  ITA_mbt_hull_4: "5th Generation Tank Hull"
  ITA_mbt_hull_4_desc: "A future era tank. Main battle tanks have become less and less formidable opponents as anti-tank weaponry develops rapidly and weight in combat switches to airpower. If tanks are to survive as valid options in future wars, they will need a complete rethinking of their design and role."
  USA_tank_small_medium_cannon: "105 mm M68"
- USA_tank_small_medium_cannon_2: "105 mm M68A1"
  USA_tank_medium_cannon_1: "120 mm gun M5"
  USA_tank_medium_cannon_2: "120 mm M256"
  USA_tank_medium_cannon_3: "120 mm M360"
@@ -1121,3 +1116,8 @@
  spart_hull_2_desc: "Self-propelled artillery refers to artillery installed on a vehicle, such as using the vehicle chassis to generate its own power and does not require towing by other vehicles. Most of them are protected by light armor. Artillery is generally howitzers, mortars, cannons, anti-tank guns, rocket launchers or anti-aircraft guns."
  spart_hull_3_desc: "Self-propelled artillery refers to artillery installed on a vehicle, such as using the vehicle chassis to generate its own power and does not require towing by other vehicles. Most of them are protected by light armor. Artillery is generally howitzers, mortars, cannons, anti-tank guns, rocket launchers or anti-aircraft guns."
  spart_hull_4_desc: "Self-propelled artillery refers to artillery installed on a vehicle, such as using the vehicle chassis to generate its own power and does not require towing by other vehicles. Most of them are protected by light armor. Artillery is generally howitzers, mortars, cannons, anti-tank guns, rocket launchers or anti-aircraft guns."
+ smoke_launchers_3: "Modern Smoke and Laser Warning System"
+ smoke_launchers_3_desc: "Laser Warning System alert the crew when the vehicle is targeted by a laser guided missile or tank firing control.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ SOV_smoke_launchers_3: "Shtora-1"
+ SOV_smoke_launchers_3_desc: "The Shtora-1 'electro-optical active protection system' is an advanced smoke launcher device. It fires the 3D17 smoke grenade, which smokes via red phosphorous. The smoke burns hot enough to mask the tank from thermal imaging.\n\n§GDesigner Hint: Adding smoke launchers reduces the visibility of our tank, making it better in both defence and offence§!"
+ USA_tank_small_medium_cannon_2: "105 mm M68A1"
