--- a/localisation/polish/MD_AC_l_polish.yml
+++ b/localisation/polish/MD_AC_l_polish.yml
@@ -121,7 +121,7 @@
  AC_construction_POWER_PLANT_delayed: "§YWymagania§!:\n[!AC_building_power_plant_button_click_enabled]"
  AC_construction_NUCLEAR_REACTOR: "§YReaktor jądrowy§!\nBudynek reaktora jądrowego przekształca energię jądrową w energię elektryczną, zużywając w tym procesie umiarkowanie wzbogacony uran.\n\n§YPodstawowy koszt na konstrukcję:§! §R$[?global.BUILD_COST_NUCLEAR_REACTOR]§! miliard"
  AC_construction_NUCLEAR_REACTOR_delayed: "§YWymagania§!:\n[!AC_building_nuclear_reactor_button_click_enabled]"
- AC_construction_AGRICULTURE_DISTRICT: "§YSkomercjalizowane dzielnice rolnicze§!\n§YSkomercjalizowane dzielnice rolnicze§! reprezentuje wszystkie rodzaje rolnictwa nietowarowego w naszym kraju. Obejmuje ono przemysł rolny, grunty orne, silosy zbożowe, rzeźnie i inne.\n\n§YKoszt podstawowy za strukturę:§! §R$[?global.BUILD_COST_AGRICULTURE_DISTRICT]§! Miliard"
+ AC_construction_AGRICULTURE_DISTRICT: "§YSkomercjalizowane dzielnice rolnicze§!\n§YSkomercjalizowane dzielnice rolnicze§! reprezentuje wszystkie rodzaje rolnictwa nietowarowego w naszym kraju. Obejmuje ono przemysł rolny, grunty orne, silosy zbożowe, rzeźnie i inne.\n\n§YKoszt podstawowy za strukturę:§! §R$[?global.BUILD_COST_AGRICULTURE_DISTRICT]§! Miliardów"
  AC_construction_AGRICULTURE_DISTRICT_delayed: "§YWymagania§!:\n[!AC_building_agriculture_district_button_click_enabled]"
  AC_allied_construction_icon1_tt: "Sojusznicze projekty budowlane\n\n§LUtwórz projekt budowlany w państwie swojego sojusznika.§!"
  AC_down_arrow_tt: "Ukryj interfejs inwestycyjny"
