--- a/localisation/polish/MD_NATO_events_l_polish.yml
+++ b/localisation/polish/MD_NATO_events_l_polish.yml
@@ -5,7 +5,7 @@
  leave_NATO_desc: "Nie jesteśmy już zainteresowani byciem częścią NATO"
  denounce_Status_As_Major_Non_NATO_Ally: "§YDenounce§! Status głównego sojusznika spoza NATO"
  denounce_Status_As_Major_Non_NATO_Ally_desc: "Nie jesteśmy już zainteresowani przynależnością do sojuszu NATO."
- become_NATO_aspirant: "§YBecome§! kraj aspirujący do NATO"
+ become_NATO_aspirant: "§YZostań§! krajem aspirującym do NATO"
  become_NATO_aspirant_desc: "Kraje aspirujące do NATO to państwa, które wykazały zainteresowanie byciem członkami NATO. Po okazaniu zainteresowania NATO otrzymamy Plan Działań na rzecz Członkostwa, który wyznaczy nam cele do osiągnięcia, zanim będziemy mogli przystąpić do NATO. Po osiągnięciu celów będziemy mogli rozpocząć rozmowy akcesyjne, co będzie wymagało uzyskania zgody wszystkich obecnych członków NATO."
  finish_NATO_membership_action_plan: "§YComplete§! Plan działania dotyczący członkostwa"
  finish_NATO_membership_action_plan_desc: "Kończąc Plan Działań na rzecz Członkostwa nałożony na nas przez NATO, możemy rozpocząć rozmowy akcesyjne z obecnymi członkami. Każdy istniejący członek NATO musi zatwierdzić nasz wniosek. Nasz status pozostanie wnioskodawcą NATO, dopóki wszyscy członkowie nie zatwierdzą naszego wniosku."
