--- a/localisation/polish/MD_focus_DEN_l_polish.yml
+++ b/localisation/polish/MD_focus_DEN_l_polish.yml
@@ -1405,7 +1405,7 @@
  DEN_Regimental_Doctors: "Lekarze pułkowi obrony"
  DEN_Civilian_Education: "Edukacja Cywilna Obrony"
  DEN_Dental_Plan: "Plan dentystyczny obrony"
- DEN_army_dynamic_modifier: "Duńskie Siły Obronne"
+ DEN_army_dynamic_modifier: "Forsvaret"
  DEN_Danish_Defence_Force: "Duńskie Siły Obronne"
  DEN_Danish_Defence_Force_desc: "Armia duńska jest częścią sił lądowych duńskiej obrony i jest odpowiedzialna za obronę Danii i jej interesów zarówno w kraju, jak i za granicą. Został założony w 1614 roku i ma długą historię służby wojskowej."
  DEN_Dental_Plan_Add_tt: "Modyfikatory §YDuńskie Siły Obronne§! \nOrganizacja dywizji: §G+10%§! \nMnożnik kosztów wojskowych: §R+2%§!"
@@ -1473,7 +1473,7 @@
  DEN_terrain_penalty_reduction_tt: "Modyfikuje §YZmniejszenie kary terenowej§! za §HForsvaret§! o [?DEN_terrain_penalty_reduction_change|+%] (obecnie: [?DEN_terrain_penalty_reduction|Y%])"
  DEN_navy_fuel_consumption_factor_tt: "Modyfikuje §YNavy Zużycie paliwa§! za §HForsvaret§! o [?DEN_navy_fuel_consumption_factor_change|-%] (obecnie: [?DEN_navy_fuel_consumption_factor|Y%])"
  DEN_equipment_cost_multiplier_modifier_tt: "Modyfikuje §YKoszt sprzętu§! za §HForsvaret§! o [?DEN_equipment_cost_multiplier_modifier_change|-%] (bieżący: [?DEN_equipment_cost_multiplier_modifier|Y%])"
- DEN_bureaucracy_cost_multiplier_modifier_tt: "Modyfikuje §YKoszt administracyjny§! za §HForsvaret§! przez [?DEN_bureaucracy_cost_multiplier_modifier_change|-%] (bieżący: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
+ DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HKingdom of Denmark§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|+%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "Modyfikuje §YMProduktywność fabryk wojskowych§! za §HForsvaret§! przez [?DEN_military_factories_productivity_change|-%] (obecnie: [?DEN_military_factories_productivity|Y%])"
  DEN_dockyard_productivity_tt: "Modyfikuje §YDockyard Produktywność§! za §HForsvaret§! przez [?DEN_dockyard_productivity_change|-%] (bieżący: [?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "Modyfikuje §YMiesięczną populację§! dla §HKrólestwa Danii§! o [?DEN_miesięczna_populacja_zmiana|+%] (bieżąca: [?DEN_miesięczna_populacja|Y%])"
@@ -1681,3 +1681,7 @@
  DEN_water_conservation_decision: "Dotacje na rzecz ochrony wody"
  DEN_marine_conservation_decision: "Dotacje na ochronę morza"
  DEN_Protest: "Protesty Ludu"
+ DEN_police_cost_multiplier_modifier_tt: "Modifies §YPolice Cost§! for §HKingdom of Denmark§! by [?DEN_police_cost_multiplier_modifier_change|+%] (Current: [?DEN_police_cost_multiplier_modifier|Y%])"
+ DEN_education_cost_multiplier_modifier_tt: "Modifies §YEducation Cost§! for §HKingdom of Denmark§! by [?DEN_education_cost_multiplier_modifier_change|+%] (Current: [?DEN_education_cost_multiplier_modifier|Y%])"
+ DEN_health_cost_multiplier_modifier_tt: "Modifies §YHealthcare Cost§! for §HKingdom of Denmark§! by [?DEN_health_cost_multiplier_modifier_change|+%] (Current: [?DEN_health_cost_multiplier_modifier|Y%])"
+ DEN_social_cost_multiplier_modifier_tt: "Modifies §YSocial Spendings§! for §HKingdom of Denmark§! by [?DEN_social_cost_multiplier_modifier_change|+%] (Current: [?DEN_social_cost_multiplier_modifier|Y%])"
