--- a/localisation/polish/MD_focus_ITA_l_polish.yml
+++ b/localisation/polish/MD_focus_ITA_l_polish.yml
@@ -864,7 +864,7 @@
  ITA_maurizio_acerbo_desc: ""
  ITA_maurizio_acerbo_TT: "Tło: Członek związku: §YKoszty opieki społecznej§! §G-5%§!"
  ITA_luigi_di_maio: "Luigiego di Maio"
- ITA_luigi_di_maio_desc: "Per la Coca Cola un euro, grazie"
+ ITA_luigi_di_maio_desc: "Za Coca Colę jedno euro, dziękuję"
  ITA_luigi_di_maio_TT: "Niedoświadczony: §YWładza polityczna§! §R-10%§!"
  ITA_giuseppe_conte: "Giuseppe Conte"
  ITA_giuseppe_conte_desc: "Najlepszy allenadore del mondo."
@@ -906,7 +906,7 @@
  ITA_matteo_renzi_desc: "Szisz"
  ITA_matteo_renzi_TT: "Tło: Kariera Polityczna: §YWładza polityczna§! §G10%§!\nTancerz polityczny: §YWładza polityczna§! §G15%§!"
  ITA_carlo_calenda: "Carlo Calenda"
- ITA_carlo_calenda_desc: "I videogiochi sono diseducativi"
+ ITA_carlo_calenda_desc: "Gry wideo są dezinformujące"
  ITA_carlo_calenda_TT: "Tło: Biznesmen: §YSzybkość budowy§! §G5%§! §YSzybkość budowy biur§! §G5%§!"
  ITA_stefano_parisi: "Stefano Parisi"
  ITA_stefano_parisi_desc: ""
