--- a/localisation/polish/MD_internal_factions_l_polish.yml
+++ b/localisation/polish/MD_internal_factions_l_polish.yml
@@ -418,7 +418,7 @@
  raise_wages_labour_unions_decision_desc: "Podniesienie płac w kraju sprawi, że grupy pracowników w kraju będą bardziej zadowolone z naszego rządu."
  reduce_taxes_farmer_mission: "The Farmers Demanded Reduced Taxes"
  reduce_taxes_farmer_mission_desc: "The Farmers need additional money due to recent poor sales and the rising inflation within the economy. They've asked us to decrease our §YCorporate Tax Rate§! by §G5%§! to help with this campaign."
- agricultural_district_tax_credits_decision: "§YCommercialized Agriculture Districts§! Tax Credits"
+ agricultural_district_tax_credits_decision: "§YKomercyjne Dystrykty Rolnictwa§! Ulgi podatkowe"
  agricultural_district_tax_credits_decision_desc: "Możemy wydać serię niewielkich ulg podatkowych, które pomogą złagodzić problemy ekonomiczne rolnika, ale kosztem zmniejszonego dochodu przez kilka następnych miesięcy. Jak powinniśmy postąpić?"
  allow_foreign_nationals_military_decision: "Zezwolić obcokrajowcom na służbę w wojsku"
  allow_foreign_nationals_military_decision_desc: "Nasze wojsko jest w niepewnej sytuacji i musimy sprowadzić dodatkowych poborowych, gwarantując im obywatelstwo."
