--- a/localisation/polish/MD_international_l_polish.yml
+++ b/localisation/polish/MD_international_l_polish.yml
@@ -68,8 +68,8 @@
  over_create: "§YChina Overseas Group Security§! PMC Formed"
  front_create: "§YFrontier Services Group§! PMC Formed"
  redut_create: "§YRedut§! PMC Formed"
- gazprom_create: "§YGazprom§! PMC Formed"
- iron_create: "§YIron Navy§! PMC Formed"
+ gazprom_create: "§YGazprom§! PMC utworzone"
+ iron_create: "§YIron Navy§! PMC utworzone"
  sheriff_create: "§YSheriff§! PMC Formed"
  lukoil_create: "§YLukoil§! PMC Formed"
  rosneft_create: "§YRosneft§! PMC Formed"
@@ -208,12 +208,12 @@
  get_aegis_mot_infantry: "Hire Aegis Motorised Infantry"
  get_aegis_mech_infantry: "Hire Aegis Mechanized Infantry"
  get_aegis_heavy_mech_infantry: "Hire Aegis Heavy Mechanized Infantry"
- get_aegis_special_infantry: "Hire Aegis Assault Unit"
- get_aegis_tank: "Hire Aegis Tank Unit"
- get_aegis_specops: "Hire Aegis SpecOps Unit"
- disband_aegis_light_infantry: "Terminate contract with Aegis Light units"
- disband_aegis_mot_infantry: "Terminate contract with Aegis Motorised units"
- disband_aegis_mech_infantry: "Terminate contract with Aegis Mechanized units"
+ get_aegis_special_infantry: "Zatrudnij jednostkę szturmową Aegis"
+ get_aegis_tank: "Wynajmij jednostkę czołgów Aegis"
+ get_aegis_specops: "Zatrudnij jednostkę Aegis SpecOps"
+ disband_aegis_light_infantry: "Zakończ umowę z jednostkami Aegis Light"
+ disband_aegis_mot_infantry: "Zakończ umowę z Aegis Motorised Units"
+ disband_aegis_mech_infantry: "Zakończ umowę z jednostkami zmechanizowanymi Aegis"
  disband_aegis_heavy_mech_infantry: "Terminate contract with Aegis Heavy Mechanized units"
  disband_aegis_special_infantry: "Terminate contract with Aegis Assault units"
  disband_aegis_tank: "Terminate contract with Aegis Tank units"
@@ -223,7 +223,7 @@
  get_constellis_mech_infantry: "Hire Constellis Mechanized Infantry"
  get_constellis_heavy_mech_infantry: "Hire Constellis Heavy Mechanized Infantry"
  get_constellis_special_infantry: "Hire Constellis Assault Unit"
- get_constellis_tank: "Hire Constellis Tank Unit"
+ get_constellis_tank: "Wynajmij jednostkę czołgów Constellis"
  get_constellis_specops: "Hire Constellis SpecOps Unit"
  disband_constellis_light_infantry: "Terminate contract with Constellis Light units"
  disband_constellis_mot_infantry: "Terminate contract with Constellis Motorised units"
