--- a/localisation/polish/MD_techs_l_polish.yml
+++ b/localisation/polish/MD_techs_l_polish.yml
@@ -869,7 +869,7 @@
  centralized_maintenance: "Centralized Maintenance Teams"
  centralized_maintenance_desc: "With a central location for repairs, maintenance, and more, our forces will be able to quickly coordinate the drop off of damaged vehicles to a central point, simplifying supply lines."
  decentralized_maintenance: "Decentralized Maintenance Teams"
- decentralized_maintenance_desc: "By dispersing our maintenance teams out into their individual units, we can ensure rapid repair and work performed on vehicles."
+ decentralized_maintenance_desc: "Dzięki rozmieszczeniu naszych zespołów konserwacyjnych w poszczególnych jednostkach możemy zapewnić szybką realizację napraw i prac przy pojazdach."
  unit_level_supply: "Zaopatrzenie na poziomie jednostki"
  unit_level_supply_desc: "Umieszczając większość naszego zaopatrzenia w poszczególnych jednostkach bojowych, możemy dłużej utrzymać działania bojowe."
  joint_supply_theory: "Teoria wspólnych dostaw"
@@ -977,7 +977,7 @@
  offensive_fires: "Ofensywne wsparcie ogniowe"
  offensive_fires_desc: "Wybierając opcje wsparcia ogniowego, które pomogą nam w walce, możemy najlepiej określić, w jaki sposób kierować tymi zasobami."
  integrated_close_air: "Zintegrowane wsparcie powietrzne helikopterów"
- integrated_close_air_desc: "By assigning attack helicopter companies to our combat arms elements, we can ensure every unit has the ability to call for fire support at a moments notice."
+ integrated_close_air_desc: "Przydzielając kompanie śmigłowców szturmowych do naszych jednostek bojowych, możemy zagwarantować, że każda jednostka będzie miała możliwość wezwania wsparcia ogniowego w każdej chwili."
  battlefield_support: "Wsparcie sił naziemnych"
  battlefield_support_desc: "Poprzez bezpośrednie wsparcie ogniowe, rozpoznanie lub obserwację nasze jednostki helikopterów będą wzmacniaczem siły naszych jednostek liniowych."
  combat_unit_destruction: "Zniszczenie wrogiego bojownika"
@@ -1089,7 +1089,7 @@
  gunship_strike_force: "Siły Uderzeniowe Gunship"
  gunship_strike_force_desc: "Zamiast rozprzestrzeniać siły, połączymy nasze statki bojowe w duże formacje i wykorzystamy je do uderzenia głęboko w linie wroga."
  multi_weapon_pylons: "Pylony wielobronne"
- multi_weapon_pylons_desc: "By making sure our gunships can equip a large range of weapons, we maximize their ability to engage any target they may be assigned."
+ multi_weapon_pylons_desc: "Upewniając się, że nasze śmigłowce bojowe mogą być wyposażone w szeroką gamę broni, maksymalizujemy ich zdolność do atakowania dowolnego celu, jaki zostanie im przydzielony."
  tank_hunter_focus: "Łowcy czołgów"
  tank_hunter_focus_desc: "Zamiast sprawiać, że nasze helikoptery marnują czas na pomniejsze ofiary, zamiast tego zostaną wyposażone i wyszkolone do niszczenia głównych czołgów bojowych wroga."
  infantry_hunter_focus: "Łowcy piechoty"
@@ -2451,7 +2451,7 @@
  frigate_go_brrrt_desc: "Każda fregata będzie w stanie zaatakować wszystko, co się na nią zbliży. Morze, ląd lub powietrze."
  pt_sees_all: "PT widzi wszystko"
  pt_sees_all_desc: "Łodzie patrolowe wyposażone w silniejsze radary i tym podobne powinny pozwolić nam zobaczyć wszystko w naszym sąsiedztwie przybrzeżnym."
- hit_n_run: "Hit 'n Ruin"
+ hit_n_run: "Uderzenie i zniszczenie"
  hit_n_run_desc: "Nasze statki będą poruszać się szybko i zniszczą całą flotę wroga, zanim zdążą zorientować się, co je trafi."
  dancing_with_giants: "Taniec z Gigantami"
  dancing_with_giants_desc: "Nasze statki, choć małe, zawsze będą mogły tańczyć z gigantami."
