--- a/localisation/polish/victory_points_l_polish.yml
+++ b/localisation/polish/victory_points_l_polish.yml
@@ -47,7 +47,7 @@
  VICTORY_POINTS_3369: "Bristol"
  VICTORY_POINTS_6270: "Coventry"
  VICTORY_POINTS_6221: "Oksfordu"
- VICTORY_POINTS_11471: "Czytanie"
+ VICTORY_POINTS_11471: "Reading"
  VICTORY_POINTS_11345: "Buzować"
  VICTORY_POINTS_11333: "Londyn"
  VICTORY_POINTS_6237: "Nottingham"
@@ -450,7 +450,7 @@
  VICTORY_POINTS_9438: "Poniewież"
  VICTORY_POINTS_6281: "Olita"
  VICTORY_POINTS_6558: "Poznań"
- VICTORY_POINTS_243: "Bydgozna"
+ VICTORY_POINTS_243: "Bydgoszcz"
  VICTORY_POINTS_6236: "Gorzów"
  VICTORY_POINTS_3438: "Zielona Góra"
  VICTORY_POINTS_9546: "Kaliszu"
@@ -2910,7 +2910,7 @@
  VICTORY_POINTS_6458: "Niżyn"
  VICTORY_POINTS_9437: "Pryluky"
  VICTORY_POINTS_525: "Kijów"
- VICTORY_POINTS_9533: "Żytomierz"
+ VICTORY_POINTS_9533: "Zhytomyr"
  VICTORY_POINTS_511: "Połtawa"
  VICTORY_POINTS_488: "Czerkasy"
  VICTORY_POINTS_3452: "Kirowohrad"
@@ -3327,7 +3327,7 @@
  VICTORY_POINTS_11785: "Harrisburga"
  VICTORY_POINTS_822: "Yorku"
  VICTORY_POINTS_3824: "Lancastera"
- VICTORY_POINTS_6869: "Czytanie"
+ VICTORY_POINTS_6869: "Reading"
  VICTORY_POINTS_6872: "Uczelnia publiczna"
  VICTORY_POINTS_12405: "Altoona"
  VICTORY_POINTS_3850: "Johnstown"
@@ -4418,7 +4418,7 @@
  VICTORY_POINTS_9675: "Rzeka Saxtons"
  VICTORY_POINTS_908: "Springfield"
  VICTORY_POINTS_11830: "Putnam"
- VICTORY_POINTS_16093: "Waszyngton."
+ VICTORY_POINTS_16093: "Waszyngton"
  VICTORY_POINTS_16092: "Arlington"
  VICTORY_POINTS_16087: "Baltimore"
  VICTORY_POINTS_16081: "Czarleston"
