--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -1290,3 +1290,4 @@
  UZB_karakalpakstan.4.d: "当地卡拉卡尔帕克人正在庆祝民族节日，激进的乌兹别克人袭击了庆祝者。数人受伤，袭击者已被警方拘留。我们该如何处理？"
  UZB_karakalpakstan.4.a: "支持卡拉卡尔帕克人"
  UZB_karakalpakstan.4.b: "支持乌兹别克人"
+ Karakalpaks_rebelled_yes: "卡拉卡尔帕克斯坦已然叛乱"
