--- a/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
@@ -1361,7 +1361,7 @@
  DEN_terrain_penalty_reduction_tt: "将[?DEN_terrain_penalty_reduction_change|+%]§Y地形惩罚减免§!用于§H国防军§!(现有地形惩罚减免：[?DEN_terrain_penalty_reduction|Y%])"
  DEN_navy_fuel_consumption_factor_tt: "将[?DEN_navy_fuel_consumption_factor_change|-%]§Y海军燃油消耗§!用于§H国防军§!(现有海军燃油消耗：[?DEN_navy_fuel_consumption_factor|Y%])"
  DEN_equipment_cost_multiplier_modifier_tt: "将[?DEN_equipment_cost_multiplier_modifier_change|-%]§Y装备消耗§!用于§H国防军§!(现有装备消耗：[?DEN_equipment_cost_multiplier_modifier|Y%])"
- DEN_bureaucracy_cost_multiplier_modifier_tt: "将[?DEN_bureaucracy_cost_multiplier_modifier_change|-%]§Y行政花费§!用于§H国防军§!(现有行政花费：[?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
+ DEN_bureaucracy_cost_multiplier_modifier_tt: "将[?DEN_bureaucracy_cost_multiplier_modifier_change|+%]§Y行政花费§!用于§H丹麦王国§!(现有行政花费：[?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "将[?DEN_military_factories_productivity_change|-%]§Y军用工厂生产率§!用于§H国防军§!(现有军用工厂生产率：[?DEN_military_factories_productivity|Y%])"
  DEN_dockyard_productivity_tt: "将[?DEN_dockyard_productivity_change|+%]§Y船坞生产率§!用于§H国防军§!(现有船坞生产率：[?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "将[?DEN_monthly_population_change|+%]§Y月度人口增长§!用于§H丹麦王国§!(现有月度人口增长：[?DEN_monthly_population|Y%])"
@@ -1681,3 +1681,7 @@
  DEN_water_conservation_decision: "节水补贴"
  DEN_marine_conservation_decision: "海洋保护补贴"
  DEN_Protest: "民众抗议"
+ DEN_police_cost_multiplier_modifier_tt: "将[?DEN_police_cost_multiplier_modifier_change|+%]§Y警务开支§!用于§H丹麦王国§!(现有行政花费：[?DEN_police_cost_multiplier_modifier|Y%])"
+ DEN_education_cost_multiplier_modifier_tt: "将[?DEN_education_cost_multiplier_modifier_change|+%]§Y教育开支§!用于§H丹麦王国§!(现有行政花费：[?DEN_education_cost_multiplier_modifier|Y%])"
+ DEN_health_cost_multiplier_modifier_tt: "将[?DEN_health_cost_multiplier_modifier_change|+%]§Y医疗保健开支§!用于§H丹麦王国§!(现有行政花费：[?DEN_health_cost_multiplier_modifier|Y%])"
+ DEN_social_cost_multiplier_modifier_tt: "将[?DEN_social_cost_multiplier_modifier_change|+%]§Y社会开支§!用于§H丹麦王国§!(现有行政花费：[?DEN_social_cost_multiplier_modifier|Y%])"
