--- a/localisation/simp_chinese/MD_new_traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_new_traits_l_simp_chinese.yml
@@ -177,9 +177,7 @@
  pro_taliban_desc: "是塔利班的积极或秘密支持者。"
  taliban_militant: "背景：塔利班武装分子"
  taliban_militant_desc: "此人曾是塔利班有关连或直接受其指挥的武装分子。"
- diplomat: "外交家"
- union_man: "工会之人"
- educator: "教育家"
+ diplomat: "背景：外交家"
  railroad_enthusiast: "铁路建设拥护者"
  railroad_enthusiast_desc: "对铁路和铁路及其工作和功能充满热情。"
  logistical_tunnel_vision: "物流渠道先知"
@@ -189,3 +187,15 @@
  aviation_engineer: "背景：航空工程师"
  substance_abuser: "药物滥用者"
  playboy_lifestyle: "花花公子生活方式"
+ pro_east_africa: "亲东非"
+ farmer: "背景：农民"
+ ex_engineer: "背景：前工程师"
+ ex_engineer_desc: "此人具有工程师经验，对工程设计项目相当熟悉。"
+ diplomat_desc: "他曾担任外交官，擅长处理国际事务。"
+ farmer_desc: "有过务农经历，他熟悉整个农业运作。"
+ aviation_engineer_desc: "作为一名航空工程师，此人对整个航空系统有独到的见解。"
+ spy_desc: "他曾经是一名情报官员，但关于他的其他信息我们一无所知。"
+ economist_desc: "作为经济学家，他对市场的运作、资本的管控有独到的见解。"
+ substance_abuser_desc: "他的吸毒成瘾对他的精神健康造成了严重问题。"
+ playboy_lifestyle_desc: "他上过的美女比我见过的还多。"
+ IRGC_Member_desc: "革命卫队成员，忠于法基赫的监护"
