--- a/localisation/simp_chinese/events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/events_l_simp_chinese.yml
@@ -1921,7 +1921,7 @@
  korea.29.t: "中方要求韩方向中方移交中国人民志愿军烈士遗骸"
  korea.29.d: ""
  korea.29.a: "我们当然会。 我们尊重这些士兵。"
- korea.29.b: "他们是我们的敌人，是我们土地的侵略者！我们无法接受！"
+ korea.29.b: "他们是我们的敌人，是我们的土地的入侵者！我们不能接受这一点！"
  korea.30.t: "韩国首次将志愿军烈士遗骸转交至中国"
  korea.30.d: "\n第一批包括在江原道和京畿道等多个地区挖掘发现的遗骸。许多遗骸无法辨认。最初估计包含425具士兵遗骸，但后来估计增加到437具。\n\n中韩两国在韩国仁川国际机场举行了这些遗骸交接仪式。中韩双方代表在那里签署了交接书。韩方派出22辆车辆运送遗体。中国空军专机进入中国领空后，两架歼11前来护航。"
  korea.30.a: "致敬！"
