--- a/localisation/simp_chinese/plane_designer_l_simp_chinese.yml
+++ b/localisation/simp_chinese/plane_designer_l_simp_chinese.yml
@@ -213,12 +213,12 @@
  rocket_weapons_1_desc: "早期的火箭荚舱使飞机能够快速地用高爆弹头的精确饱和度来攻击目标，而价格却比制导弹药便宜得多。"
  rocket_weapons_2: "现代无控火箭"
  rocket_weapons_2_desc: "更精确的火箭和弹头进步使这些武器系统比早期的同类武器系统有了重大进步，同时仍然是为飞机提供近距离空中支援和打击任务能力的廉价而有效的方式。"
- countermeasures_1: "早期防御措施"
- countermeasures_1_desc: "当导弹突然出现时，飞机需要一种方法来保护自己免受攻击，而不仅仅是试图超越或躲避导弹。箔条和照明弹提供了诱饵，使飞行员能够尝试欺骗来袭的导弹威胁。"
- countermeasures_2: "现代防御措施"
- countermeasures_2_desc: "随着计算机变得越来越智能、速度越来越快，在飞机上自动执行某些任务变得更加简单。有了这些系统，飞机可以自动运行程序，在受到攻击时部署对抗措施，在最佳时刻最大限度地提高躲避攻击的机会。"
- countermeasures_3: "电子战防御措施"
- countermeasures_3_desc: "随着超视距战斗成为王道，阻止对手看到或锁定你的能力变得越来越重要。干扰吊舱和内部干扰器使飞机能够通过向敌方雷达填充虚假回波来阻止敌方雷达探测或锁定敌方雷达，这需要大量电力才能烧毁。"
+ countermeasures_1: "防御措施与早期雷达告警接收器"
+ countermeasures_1_desc: "随着导弹的出现，飞机需要一种不依赖逃跑或躲避导弹的方法来防御攻击。箔条和照明弹提供了诱饵，让飞行员可以尝试欺骗来袭的导弹威胁，而当飞机被雷达锁定时，雷达警告接收器会向飞行员发出警报。"
+ countermeasures_2: "防御措施与现代雷达告警接收器"
+ countermeasures_2_desc: "虽然对抗措施没有太大变化，但现代雷达告警接收器现在可以显示雷达类型、距离等关键信息。现代导弹预警系统在探测到导弹时还可以自动部署对抗措施。"
+ countermeasures_3: "电子战套件"
+ countermeasures_3_desc: "飞机现在可以携带自己的先进电子战设备，而不必依赖专用的干扰飞机。这些强大的系统提供了无与伦比的保护，可抵御越来越致命的威胁。多光谱干扰弹可进一步防御现代红外导弹。"
  countermeasures_4: "激光硬杀伤措施"
  countermeasures_4_desc: "随着导弹威胁变得越来越难诱骗，任务从躲避转向摧毁。这些安装在飞机上的系统使用高功率激光器来禁用来袭导弹上的制导系统，或者在弹头到达目标之前引爆弹头。"
  rapid_dragon: "托盘化空射巡航导弹"
@@ -502,12 +502,12 @@
  spec_thrust_vector_2_desc: "推力矢量控制系统用于提高机动性。\n\n§G设计者提示：使用这个模块可以提高飞机的防空能力，但是会降低可靠性。当你想要制造一种更耐用的飞机而不用付出隐身的代价时，推荐使用这个模块。§!"
  spec_thrust_vector_3: "双轴推力矢量控制"
  spec_thrust_vector_3_desc: "高级的推力矢量控制，可以在多个轴上提高机动性。\n\n§G设计者提示：使用这个模块可以提高飞机的防空能力，但是会降低可靠性。当你想要制造一种更耐用的飞机而不用付出隐身的代价时，推荐使用这个模块。§!"
- spec_countermeasures_1: "早期防御措施"
+ spec_countermeasures_1: "防御措施与早期雷达告警接收器"
  spec_countermeasures_1_desc: "针对导弹攻击的早期防御选择。\n\n§G设计者提示：全面提高飞机的防空能力。建议每架飞机至少配备一个反制措施模块，特别是如果飞机没有任何隐身模块的话。§!"
- spec_countermeasures_2: "现代防御措施"
+ spec_countermeasures_2: "防御措施与现代雷达告警接收器"
  spec_countermeasures_2_desc: "现代化的金属箔条和红外干扰弹。\n\n§G设计者提示：全面提高飞机的防空能力。建议每架飞机至少配备一个反制措施模块，特别是如果飞机没有任何隐身模块的话。§!"
- spec_countermeasures_3: "雷达干扰吊舱"
- spec_countermeasures_3_desc: "针对雷达制导导弹的电子战导弹防御系统。\n\n§G设计者提示：全面提高飞机的防空能力，同时提高雷达优势。建议每架飞机至少配备一个反制措施模块，特别是如果飞机没有任何隐身模块的话。§!"
+ spec_countermeasures_3: "电子战套件"
+ spec_countermeasures_3_desc: "电子战套件\n\n§G设计者提示：全面提高飞机的防空能力，同时提高雷达优势。建议每架飞机至少配备一个反制措施模块，特别是如果飞机没有任何隐身模块的话。§!"
  spec_countermeasures_4: "激光硬杀伤系统"
  spec_countermeasures_4_desc: "硬杀伤反制，用于防御所有导弹威胁的反制措施。\n\n§G设计者提示：全面提高飞机的防空能力，同时提高雷达优势。建议每架飞机至少配备一个反制措施模块，特别是如果飞机没有任何隐身模块的话。§!"
  engine_light_single_1: "早期轻型引擎"
