--- a/localisation/french/MD_defence_companies_l_french.yml
+++ b/localisation/french/MD_defence_companies_l_french.yml
@@ -78,7 +78,6 @@
  GER_rheinmetall_tank_manufacturer: "Rheinmetall"
  GER_heckler_koch_materiel_manufacturer: "Heckler & Koch"
  GER_airbus_defence_aircraft_manufacturer: "Airbus Defence"
- GER_panavia_aircraft_manufacturer: "Panavia Aircraft Germany"
  GER_airbus_helicopters_tank_manufacturer: "Airbus Helicopters"
  GER_thyssenkrupp_marine_naval_manufacturer: "ThyssenKrupp Marine"
  GER_thyssenkrupp_marine_naval_manufacturer2: "ThyssenKrupp Marine"
@@ -288,3 +287,4 @@
  USA_united_defense_tank_manufacturer: "United Defense"
  USA_textron_tank_manufacturer: "Textron"
  USA_general_dynamics_APC_manufacturer: "GDLS-C"
+ GER_panavia_aircraft_manufacturer: "Panavia Avion Allemagne"
