--- a/localisation/french/plane_designer_l_french.yml
+++ b/localisation/french/plane_designer_l_french.yml
@@ -217,12 +217,12 @@
  rocket_weapons_1_desc: "Les premiers pods de fusées permettaient aux avions de disposer d'une méthode rapide pour engager des cibles avec une saturation précise d'ogives hautement explosives, pour un prix nettement moins cher que les munitions guidées."
  rocket_weapons_2: "Roquettes non guidées modernes"
  rocket_weapons_2_desc: "Des roquettes plus précises et des avancées dans les têtes militaires ont fait de ces systèmes d'armes une amélioration significative par rapport à leurs prédécesseurs, tout en restant un moyen bon marché et efficace de fournir des capacités de soutien aérien rapproché et de mission de frappe aux avions."
- countermeasures_1: "Contre-mesures et RWR précoce"
- countermeasures_1_desc: "À mesure que les missiles arrivaient sur les lieux, les avions avaient besoin d'un moyen de se défendre contre une attaque qui ne reposait pas simplement sur la tentative de distancer ou d'esquiver un missile. Les paillettes et les fusées éclairantes fournissaient des leurres qui permettaient aux pilotes de tenter de tromper les menaces de missiles entrantes tout en Les récepteurs d'alerte radar ont alerté le pilote lorsque son avion était verrouillé par un radar."
- countermeasures_2: "Contre-mesures et RWR moderne"
- countermeasures_2_desc: "Même si les contre-mesures n'ont pas beaucoup changé, les RWR modernes affichent désormais des informations cruciales telles que le type de radar et la distance. Les systèmes d'alerte de missiles modernes peuvent également déployer automatiquement des contre-mesures lors de la détection d'un missile."
- countermeasures_3: "Suite de guerre électronique"
- countermeasures_3_desc: "Les avions peuvent désormais transporter leur propre équipement de guerre électronique avancé sans avoir recours à des avions de brouillage dédiés. Ces systèmes puissants offrent une protection inégalée contre des menaces toujours plus meurtrières. Des contre-mesures multispectre offrent une protection améliorée contre les missiles infrarouge moderne."
+ countermeasures_1: "Countermeasures and early RWR"
+ countermeasures_1_desc: "As missiles jumped onto the scene, aircraft needed a way to defend themselves from attack that didn't rely on trying to just outrun or dodge a missile. Chaff and flares provided decoys that allowed pilots to attempt to deceive incoming missile threats while Radar Warning Receivers alerted the pilot when his plane was locked by a radar."
+ countermeasures_2: "Countermeasures and modern RWR"
+ countermeasures_2_desc: "While countermeasures didn't change much, modern RWR now display crucial information such as the type of radar, the distance. Modern missile warning systems can also deploy countermeasures automatically when detecting a missile."
+ countermeasures_3: "Electronic Warfare Suite"
+ countermeasures_3_desc: "Planes can now carry their own advanced eletronic warfare equipment without having to rely on dedicated jamming aircrafts. These powerful systems provide unparalleled protection against ever more lethal threats. Multispectrum flares provides further protection against modern IR missiles."
  countermeasures_4: "Contre-mesures de destruction par laser"
  countermeasures_4_desc: "Alors que les menaces de missiles deviennent de plus en plus difficiles à leurrer, la mission passe de l'esquive à la destruction. Ces systèmes montés sur les avions utilisent des lasers de haute puissance pour désactiver les systèmes de guidage d'un missile entrant, ou pour détoner la charge militaire avant qu'elle n'atteigne sa cible."
  rapid_dragon: "MC sur palettes"
@@ -506,12 +506,12 @@
  spec_thrust_vector_2_desc: "Systèmes de poussée vectorielle conçus pour augmenter la manœuvrabilité.\n\n§GConseil de conception: Utilisez ce module pour augmenter la défense aérienne d'un avion, au détriment de la fiabilité. Recommandé lorsque vous voulez créer un avion plus durable sans payer les coûts de furtivité.§!"
  spec_thrust_vector_3: "Poussée Vectorielle à Deux Axes"
  spec_thrust_vector_3_desc: "Poussée vectorielle avancée qui permet une manœuvrabilité accrue sur plusieurs axes.\n\n§GConseil de conception: Utilisez ce module pour augmenter la défense aérienne d'un avion, au détriment de la fiabilité. Recommandé lorsque vous voulez créer un avion plus durable sans payer les coûts de furtivité.§!"
- spec_countermeasures_1: "Contre-mesures et RWR précoce"
+ spec_countermeasures_1: "Countermeasures and early RWR"
  spec_countermeasures_1_desc: "Premières options de défense contre les attaques de missiles.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
- spec_countermeasures_2: "Contre-mesures et RWR moderne"
+ spec_countermeasures_2: "Countermeasures and modern RWR"
  spec_countermeasures_2_desc: "Chaff et flares moderne.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
- spec_countermeasures_3: "Suite de guerre électronique"
- spec_countermeasures_3_desc: "Suite de guerre électronique.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion, ainsi qu'une augmentation de l'avantage radar. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
+ spec_countermeasures_3: "Electronic Warfare Suite"
+ spec_countermeasures_3_desc: "EW Suite.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat, along with an increase to radar advantage. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
  spec_countermeasures_4: "Système de Contre-mesures Hard-Kill Laser"
  spec_countermeasures_4_desc: "Contre-mesures Hard-Kill pour se protéger contre toutes les menaces de missiles.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion, ainsi qu'une augmentation de l'avantage radar. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
  engine_light_single_1: "Moteur Léger Précoce"
