--- a/localisation/polish/MD_focus_LBA_l_polish.yml
+++ b/localisation/polish/MD_focus_LBA_l_polish.yml
@@ -1092,7 +1092,7 @@
  LBA_utilise_toubou_tt: "Jeśli wypowiemy wojnę §Y[CHA.GetNameWithFlag]§!, lud Toubou z §Y[TIE.GetNameWithFlag]§! §Yogłosi niepodległość§! i zostań §Y$autonomią_puppet_state$§! nasza"
  LBA_suggest_joint_mining: "Zaproponuj wspólne wydobycie"
  LBA_suggest_joint_mining_desc: "Jeśli połączymy nasze wysiłki z Czadem, będziemy w stanie wydobyć ogromne ilości uranu ze strefy Aouzou, z korzyścią dla obu krajów."
- LBA_demand_aouzou: "Demand The Aouzou Strip"
+ LBA_demand_aouzou: "Żądaj pasa Aouzou"
  LBA_demand_aouzou_desc: "Nadszedł czas, aby Chad oddał nam kontrolę nad pasem Aouzou. Jeśli odmówią, nie popełnimy tych samych błędów, które popełniliśmy podczas wojny Toyoty."
  LBA_demand_aouzou_threat: "[LBA.GetNameDef] Zażądał pasa Aouzou"
  LBA_demand_chads_submission: "Zażądaj poddania się Chada"
@@ -2070,7 +2070,7 @@
  LibyaFamily.47.a: "Oczywiście zarzuty zostaną wycofane"
  LibyaFamily.47.b: "Wywrzeć nacisk dyplomatyczny na Niemców!"
  LibyaFamily.48.t: "Skonfiskowano Ferrari Saifa al-Araba"
- LibyaFamily.48.d: "The German police has impounded Saif al-Arab's Ferrari after neighbours complained about the loud noise its exhaust was making. Saif al-Arab is now facing charges under breach of peace."
+ LibyaFamily.48.d: "Niemiecka policja skonfiskowała Ferrari Saifa al-Araba po tym, jak sąsiedzi skarżyli się na głośny hałas wydechu. Saif al-Arabowi postawiono teraz zarzuty naruszenia porządku publicznego."
  LibyaFamily.48.a: "Oczywiście zarzuty zostaną wycofane"
  LibyaFamily.48.b: "Wyślij mu pomoc prawną!"
  LibyaFamily.49.t: "Saif al-Arab umiera w więzieniu"
@@ -2180,7 +2180,7 @@
  LibyaCivilWar.8.d: "Libijska rodzina królewska na wygnaniu rozpoczęła kampanię i zbierała fundusze przeciwko Kaddafiemu. Podróżują po Europie, spotykają się z politykami, prosząc NATO o interwencję w kraju, aby zapewnić bezpieczeństwo protestującym. Widziano wielu protestujących machających flagami dawnego Królestwa Libii i niosących portrety króla Idrisa I."
  LibyaCivilWar.8.a: "To nic innego jak marionetki Zachodu!"
  LibyaCivilWar.9.t: "Minister rządu składa rezygnację"
- LibyaCivilWar.9.d: "In protest against how the government is handling the protests, one of our government ministers has resigned and decided to join the rebels."
+ LibyaCivilWar.9.d: "Na znak protestu przeciwko sposobowi, w jaki rząd radzi sobie z protestami, jeden z naszych ministrów zrezygnował ze stanowiska i postanowił przyłączyć się do rebeliantów."
  LibyaCivilWar.9.a: "Co?"
  LibyaCivilWar.10.t: "Wady ambasadora zagranicznego"
  LibyaCivilWar.10.d: "Jeden z naszych ambasadorów za granicą złożył rezygnację i uciekł do kraju goszczącego. Zabrali ze sobą kilka kluczowych dokumentów i tajemnic rządowych."
@@ -2264,13 +2264,13 @@
  LBA_mining_in_aouzou_tt_1: "Jeśli posiadamy §Y$STATE_580$§!:\n"
  LBA_mining_in_aouzou_tt_2: "Jeśli [CHA.GetNameWithFlag] zgodził się na wspólne wydobywanie:\n"
  LBA_gmmr_jaghbub: "GMMR Jaghbub"
- LBA_gmmr_jaghbub_desc: "In the East of the country, right on the border with Egypt, just south of Tobruk, there is a small town of Jaghbub. The area is a natural oasis sitting on top of an aquifer. By constructing a well here, we can bring fresh water to Tobruk."
- aozou_strip_occupation_decisions: "Aouzou Strip Occupation"
- aozou_strip_occupation_decisions_desc: "With the Aouzou Strip being a contested region between us and our neighbour, the chaos they are having might enable us to take control of the region."
- generic_occupy_aouzou_strip: "Occupy The Aozou Strip"
- generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef]'s current status makes them unable to effectively extend control over the [580.GetName]. We should send a small contingent of troops to secure the area. It is unlikely that [580.owner.GetName] will resist."
- generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] might declare war on us!§!"
- LibyaFocus.104.t: "[FROM.GetNameDef] Occupies The [580.GetName]"
- LibyaFocus.104.d: "With our security forces occupied elsewhere, the deserts of the [580.GetName] are basically unpatrolled. Taking advantage of this power vacuum, [FROM.GetNameDef] has sent a small contingent of troops to set up a small base in the town of Aozou. With the [FROM.GetAdjective] flying in the center of Aouzou town, [FROM.GetNameDef] has claimed the entire area for themselves."
- LibyaFocus.104.a: "There is nothing we can do"
- LibyaFocus.104.b: "They will pay for this!"
+ LBA_gmmr_jaghbub_desc: "Na wschodzie kraju, tuż przy granicy z Egiptem, na południe od Tobruku, znajduje się małe miasteczko Jaghbub. Obszar ten jest naturalną oazą położoną na szczycie warstwy wodonośnej. Budując tu studnię, możemy doprowadzić świeżą wodę do Tobruku."
+ aozou_strip_occupation_decisions: "Zajęcie pasa Aouzou"
+ aozou_strip_occupation_decisions_desc: "Ponieważ pas Aouzou jest obszarem spornym między nami a naszym sąsiadem, chaos, który tam panuje, może pozwolić nam przejąć kontrolę nad tym regionem."
+ generic_occupy_aouzou_strip: "Zajmijcie pas Aozou"
+ generic_occupy_aouzou_strip_desc: "[580.owner.GetNameDef] obecny status sprawia, że ​​nie są w stanie skutecznie rozszerzyć kontroli nad [580.GetName]. Powinniśmy wysłać mały kontyngent wojsk, aby zabezpieczyć ten obszar. Jest mało prawdopodobne, że [580.owner.GetName] będą stawiać opór."
+ generic_occupy_aouzou_strip_tt: "§R[580.owner.GetNameDef] może wypowiedzieć nam wojnę!§!"
+ LibyaFocus.104.t: "[FROM.GetNameDef] Zajmuje [580.GetName]"
+ LibyaFocus.104.d: "Ponieważ nasze siły bezpieczeństwa są zajęte gdzie indziej, pustynie [580.GetName] są zasadniczo niepatrolowane. Korzystając z tej próżni władzy, [FROM.GetNameDef] wysłano mały kontyngent wojsk, aby utworzyć małą bazę w mieście Aozou. Dzięki lotom [FROM.GetAdjective] w centrum miasta Aouzou, [FROM.GetNameDef] przejęto cały obszar dla siebie."
+ LibyaFocus.104.a: "Nie ma nic, co moglibyśmy zrobić"
+ LibyaFocus.104.b: "Oni za to zapłacą!"
