--- a/localisation/polish/MD_laws_l_polish.yml
+++ b/localisation/polish/MD_laws_l_polish.yml
@@ -231,20 +231,20 @@
  export_economy_desc: "Eksporterzy towarów obejmują kraje z dużymi złożami zasobów naturalnych, kraje o pośredniej produkcji lub kraje z dużymi połaciami ziemi uprawnej. Kraje te eksportują dużą część surowców i dóbr pośrednich do innych krajów, aby odpowiadać za większość swojego wzrostu gospodarczego."
  globalized_trade_economy: "Zglobalizowana gospodarka handlowa"
  globalized_trade_economy_desc: "Globalna gospodarka handlowa jest o wiele bardziej zależna od globalnego handlu niż jakikolwiek inny kraj. Prawie wszystkie nasze zasoby są wysyłane na rynek i prawie wszystkie nasze zasoby pochodzą z handlu."
- migration_laws: "Migration Laws"
- open_borders: "Open Borders"
- open_borders_desc: "Open borders represent extremely light or non-existent migration laws in the country. It allows the mostly free transference of people to and from the country."
+ migration_laws: "Prawo migracyjne"
+ open_borders: "Otwarte granice"
+ open_borders_desc: "Otwarte granice oznaczają wyjątkowo łagodne lub nieistniejące prawa migracyjne w kraju. Umożliwiają one w większości swobodny transfer osób do i z kraju."
  open_borders_tt: "\n$$[migration_laws_rate_01] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
- slightly_regulated_immigration: "Lightly Regulated Migration"
- slightly_regulated_immigration_desc: "Imposing some light regulations on the movement of people in and out of the country should help stem the tide of some unwanted migrants in the nation on the grounds of a former criminal charge or otherwise."
+ slightly_regulated_immigration: "Migracja lekko regulowana"
+ slightly_regulated_immigration_desc: "Wprowadzenie łagodniejszych regulacji dotyczących przemieszczania się osób wjeżdżających do kraju i wyjeżdżających z niego powinno pomóc powstrzymać falę niechcianych imigrantów w kraju ze względu na wcześniejsze zarzuty karne lub inne powody."
  slightly_regulated_immigration_tt: "\n$$[migration_laws_rate_02] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
- regulated_immigration: "Regulated Migration"
- regulated_immigration_desc: "Establishing regulations such as limiting the number of migrants, requiring clean criminal records, minor visas and more will be imperative for establishing a common sense mentality for the migration laws."
+ regulated_immigration: "Regulowana migracja"
+ regulated_immigration_desc: "Ustanowienie przepisów, takich jak ograniczenie liczby migrantów, wymóg niekaralności, wiz dla osób nieletnich i innych, będzie konieczne w celu ukształtowania zdroworozsądkowego podejścia do przepisów migracyjnych."
  regulated_immigration_tt: "\n$$[migration_laws_rate_03] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
  heavily_regulated_immigration: "Heavily Regulated Migration"
  heavily_regulated_immigration_desc: "Imposing heaving regulations on the number of regulations, strict and hard to achieve visas, established agencies for the sake of enforcing these rules, and curbing all forms of illegal immigration."
  heavily_regulated_immigration_tt: "\n$$[migration_laws_rate_04] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
- closed_borders: "Closed Borders"
+ closed_borders: "Zamknięte granice"
  closed_borders_desc: "The borders of the nation must be closed to ensure the identity of the nation is retained we must close our borders."
  closed_borders_tt: "\n$$[migration_laws_rate_05] §Hbillion§! is being spent on Migration Control.\n$current_migration_rate$"
  current_migration_rate: "\nMaximum §YMigration Rate§!: [?max_net_immigration_rate|%]\nCurrent Net §YMigration Rate§!: [?net_immigration_rate|%]"
