--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -550,7 +550,7 @@
  ARG_SP_arty_1: "VCTM"
  ARG_SP_R_arty_0: "SLAM Pampero"
  ARG_SP_R_arty_1: "CP-30 MRL"
- ARM_infantry_weapons: "AKM-47"
+ ARM_infantry_weapons: "AKM"
  ARM_infantry_weapons_desc: "AKM, opracowany w 1959 roku, jest najpopularniejszym zmodernizowanym wariantem karabinu AK-47, opracowanym przez Michaiła Kałasznikowa. Jest znacznie lżejszy i celniejszy podczas prowadzenia ognia automatycznego niż jego poprzednik."
  ARM_infantry_weapons1: "AK-74"
  ARM_infantry_weapons1_desc: "AK-74 powstał na bazie AKM i zawiera znaczące ulepszenia w stosunku do swojego poprzednika. Warto zauważyć, że zamiast standardowych wówczas nabojów Paktu Warzawskiego 7,62 mm wykorzystuje naboje 5,45 mm."
@@ -1705,16 +1705,12 @@
  GER_IFV_8: "Pancerny karabin maszynowy Cougar KF-73"
  GER_IFV_8_short: "Kuguar KF-73"
  GER_IFV_8_desc: "Cougar KF-73 to przyszły projekt BWP. Cougar to ulepszona i większa konstrukcja oparta na Lynx KF-41. Cougar ma większe i bardziej opancerzone podwozie oraz jest opancerzony ERA (Explosive Reactive Armor). Cougar jest również wyposażony w armatę 82 mm, działko automatyczne 40 mm, współosiowy MG4 i PPK. Oprócz tego, że jest wysoce ofensywny, Cougar jest także niezwykle defensywny i dobrze chroniony przez system aktywnej ochrony nowej generacji."
- GER_Anti_tank_0: "Panzerfausta 2"
- GER_Anti_tank_0_desc: "PzF 2 (Panzerfaust 2) był zachodnioniemiecką przenośną, bezodrzutową, przeciwpancerną wyrzutnią rakiet przeciwpancernych z lufą kalibru 44 mm (1,7 cala). Był duchowym następcą Panzerfausta z II wojny światowej i służył w armii zachodnioniemieckiej od początku lat 60. do początku lat 90. XX wieku."
- GER_Anti_tank_1: "Panzerfausta 3"
- GER_Anti_tank_1_desc: "Panzerfaust 3 to nowoczesna, półjednorazowa, bezodrzutowa broń przeciwpancerna, opracowywana w latach 1978–1985, a po raz pierwszy wprowadzona do służby w Bundeswehrze w 1987 r. Otrzymała rozkaz zapewnienia piechoty zachodnioniemieckiej skutecznej broni przeciwko współczesnemu radzieckiemu pancerzowi, tym samym zastępując starzejące się wyrzutnie PzF 44 Light Lanze w Niemczech Zachodnich."
- GER_Anti_tank_2: "MEDIOLAN 2"
- GER_Anti_tank_2_desc: "Missile d'Infanterie Léger 2 lub MILAN 2 to francusko-zachodnioniemiecki przeciwpancerny system rakiet kierowanych. Jest to kierowany przewodowo, półautomatyczny pocisk rakietowy z funkcją dowodzenia w linii wzroku (SACLOS), co oznacza, że ​​celownik jednostki startowej musi być skierowany na cel, aby naprowadzić pocisk. MILAN 2 może być wyposażony w celownik termowizyjny MIRA lub MILIS, aby zapewnić mu możliwość prowadzenia ognia w nocy. Wariant MILAN 2 ma pojedynczą głowicę z ładunkiem głównym, z sondą dystansową zwiększającą penetrację."
- GER_Anti_tank_3: "RGW90 MATADOR"
- GER_Anti_tank_3_desc: "MATADOR to 90-milimetrowy (3,5 cala) przenośny, jednorazowy system broni przeciwpancernej i przeciwmurarskiej opracowany przez Niemcy, Izrael i Singapur. Jest to udoskonalona wersja niemiecko-singapurskiego projektu Armbrust i działa na tych samych zasadach."
- GER_Anti_tank_4: "Spike-ER"
- GER_Anti_tank_4_desc: "Spike to przeciwpancerny pocisk kierowany i pocisk przeciwpiechotny typu „wystrzel i zapomnij” z tandemową głowicą przeciwpancerną (HEAT) o odłamkowo-burzącym ładunku, wyprodukowany przez firmę Eurospike GmBh. Model „ER” to wersja modelu Spike o zwiększonym zasięgu, osiągająca zasięg do 8000 m (5,0 mil). Ulepszona głowica przeciwpancerna odłamkowo-burząca (HEAT) z ładunkiem tandemowym umożliwia penetrację pancerza o grubości do 1000 mm (39 cali)."
+ GER_Anti_tank_0: "Panzerfausta 3"
+ GER_Anti_tank_0_desc: "Panzerfaust 3 to nowoczesna, półjednorazowa, bezodrzutowa broń przeciwpancerna, opracowywana w latach 1978–1985, a po raz pierwszy wprowadzona do służby w Bundeswehrze w 1987 r. Otrzymała rozkaz zapewnienia piechoty zachodnioniemieckiej skutecznej broni przeciwko współczesnemu radzieckiemu pancerzowi, tym samym zastępując starzejące się wyrzutnie PzF 44 Light Lanze w Niemczech Zachodnich."
+ GER_Anti_tank_1: "Mediolan"
+ GER_Anti_tank_2: "MELLS Spike-LR"
+ GER_Anti_tank_3: "MAC"
+ GER_Anti_tank_4: "MAC II"
  GER_Heavy_Anti_tank_0: "Pancernik 1"
  GER_Heavy_Anti_tank_0_desc: "Raketenjagdpanzer 1 to przeciwpancerny niszczyciel czołgów uzbrojony w rakiety kierowane.  Został zbudowany na podwoziu Hispano-Suiza HS.30, który był również używany w Schützenpanzer SPz 12-3. Jednak przez cały czas z zewnątrz widoczna jest tylko jedna z wyrzutni rakiet, ponieważ druga jest schowana w kadłubie w celu ponownego załadowania, gdy pierwsza będzie gotowa do strzału."
  GER_Heavy_Anti_tank_1: "Pancernik 2"
@@ -1826,18 +1822,17 @@
  GER_artillery_4: "Haubica M777A2 155 mm"
  GER_artillery_4_desc: "M777A2 to kolejny ulepszony wariant M777. Nowe ulepszenia obejmują: aktualizację oprogramowania Block 1A, dodanie ulepszonego przenośnego indukcyjnego zapalnika artyleryjskiego (EPIAFS), aby umożliwić użycie amunicji kierowanej XM892 Excalibur."
  GER_artillery_4_short: "M777A2"
- GER_util_vehicle_0: "Volkswagena Iltisa"
- GER_util_vehicle_0_desc: "Volkswagen Type 183, bardziej znany jako Iltis, to pojazd wojskowy zbudowany przez Volkswagena dla niemieckiego wojska"
- GER_util_vehicle_1: "Mercedes-Benz 250 GD „Wilk”"
- GER_util_vehicle_1_desc: "Mercedes-Benz 250 GD „Wolf” to wojskowy model modelu 250 GD Klasy G przeznaczony dla Bundeswehry."
- GER_util_vehicle_1_short: "Klasa G 250 GD"
- GER_util_vehicle_2: "Mercedes-Benz Klasa G G270 Wolf SSA"
- GER_util_vehicle_2_desc: "Mercedes-Benz Wolf SSA to wojskowy model Klasy G G-270 CDI, ulepszony w porównaniu z poprzednim modelem 250 GD."
- GER_util_vehicle_2_short: "Wilk SSA"
- GER_util_vehicle_3: "Dingo"
- GER_util_vehicle_3_desc: "ATF Dingo to niemiecki, ciężko opancerzony wojskowy pojazd transportowy MRAP oparty na podwoziu Unimog z kadłubem w kształcie litery V, produkowany przez firmę Krauss-Maffei Wegmann (KMW). \nATF to skrót od Allschutz-Transport-Fahrzeug, co po niemiecku oznacza pojazd transportowy z pełną ochroną. Nazwa pochodzi od australijskiego psa dingo. Standardowym uzbrojeniem Dingo jest karabin maszynowy Rheinmetall MG3 kal. 7,62 mm w zdalnie sterowanej wieżyczce na szczycie pojazdu."
- GER_util_vehicle_4: "Dingo-II"
- GER_util_vehicle_4_desc: "ATF Dingo 2 to zaawansowana wersja Dingo, oparta na ulepszonym podwoziu Unimoga U 5000 z ulepszoną ochroną i większą ładownością. Jest oferowany w dwóch wersjach: z rozstawem osi 3250 mm (ładowność 3,5 tony) i wersją z rozstawem osi 3850 mm (ładowność 4 tony). Dingo 2 może pomieścić osiem osób."
+ GER_util_vehicle_0: "Magirus-Deutz Jupiter"
+ GER_util_vehicle_0_desc: ""
+ GER_util_vehicle_1: "DKW Munga"
+ GER_util_vehicle_1_short: "Munga"
+ GER_util_vehicle_2: "Volkswagen Iltis"
+ GER_util_vehicle_2_desc: "Volkswagen Type 183, bardziej znany jako Iltis, to pojazd wojskowy zbudowany przez Volkswagena dla niemieckiego wojska"
+ GER_util_vehicle_2_short: "Iltis"
+ GER_util_vehicle_3: "Mercedes-Benz G-Class G270 Wolf SSA"
+ GER_util_vehicle_3_desc: "Mercedes-Benz Wolf SSA to wojskowy model Klasy G G-270 CDI, ulepszony w porównaniu z poprzednim modelem 250 GD."
+ GER_util_vehicle_4: "Dingo"
+ GER_util_vehicle_4_desc: "ATF Dingo to niemiecki, ciężko opancerzony wojskowy pojazd transportowy MRAP oparty na podwoziu Unimog z kadłubem w kształcie litery V, produkowany przez firmę Krauss-Maffei Wegmann (KMW). \nATF to skrót od Allschutz-Transport-Fahrzeug, co po niemiecku oznacza pojazd transportowy z pełną ochroną. Nazwa pochodzi od australijskiego psa dingo. Standardowym uzbrojeniem Dingo jest karabin maszynowy Rheinmetall MG3 kal. 7,62 mm w zdalnie sterowanej wieżyczce na szczycie pojazdu."
  GER_util_vehicle_5: "LAPV Enok"
  GER_util_vehicle_5_desc: "LAPV Enok to lekki opancerzony pojazd patrolowy Bundeswehry"
  GER_util_vehicle_6: "Mowag Eagle V"
@@ -2715,7 +2710,7 @@
  NKO_Amph_APC_2: "M-1992"
  NKO_Amph_APC_4: "M-2010 Chunma-D"
  NKO_Heavy_Anti_tank_0: "Susong-Po"
- NKO_Heavy_Anti_tank_1: "Konkurs MTB"
+ NKO_Heavy_Anti_tank_1: "Konkurs MTLB"
  NKO_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może razić cele w promieniu 4 km i niszczyć największe czołgi wroga."
  NKO_Heavy_Anti_tank_2: "T-55AT"
  NKO_Heavy_Anti_tank_3: "Volk AT-22"
@@ -2786,8 +2781,7 @@
  NKO_util_vehicle_6: "ZFB-21"
  NKO_util_vehicle_7: "ZFB-27"
  NKO_util_vehicle_8: "ZFB-35"
- NOR_infantry_weapons: "AG-3"
- NOR_infantry_weapons2: "AG-3F2"
+ NOR_infantry_weapons2: "AG3F1"
  NOR_command_control_equipment: "System komunikacji taktycznej Kongsberg"
  NOR_command_control_equipment_short: "K-TaCS"
  NOR_command_control_equipment1: "System komunikacji taktycznej Kongsberg C3"
@@ -3393,7 +3387,7 @@
  SOV_infantry_weapons: "AKM"
  SOV_infantry_weapons_desc: "AKM, opracowany w 1959 r., jest najpowszechniejszą zmodernizowaną wersją karabinu AK-47, opracowanego przez Michaiła Kałasznikowa. Jest znacznie lżejszy i celniejszy podczas ognia automatycznego niż jego poprzednik."
  SOV_infantry_weapons1: "AK-74"
- SOV_infantry_weapons1_desc: "AK-74 jest rozwinięciem AKM i ma znaczące ulepszenia w stosunku do swojego poprzednika. Co ciekawe, używa nabojów 5,45 mm zamiast standardowego wówczas 7,62 mm Układu Warszawskiego."
+ SOV_infantry_weapons1_desc: "AK-74 jest rozwinięciem AKM i ma znaczące ulepszenia w stosunku do swojego poprzednika. Co ciekawe, używa nabojów 5,45 mm zamiast standardowego wówczas Warzaw Pact 7,62 mm."
  SOV_infantry_weapons3: "AK-74M"
  SOV_infantry_weapons3_desc: "W 1991 roku fabryka Iżmasz w mieście Iżewsk rozpoczęła produkcję na pełną skalę zmodernizowanego wariantu AK-74 – AK-74M. Wyposażony w lżejszy zespół śruby i nośnika oraz kolbę poliamidową wypełnioną szkłem."
  SOV_infantry_weapons4: "AK-103"
@@ -3434,11 +3428,11 @@
  SOV_APC_8: "Kurganiec-45"
  SOV_APC_8_desc: "Niewiele wiadomo na temat tego super transportera opancerzonego, ale jest on wyposażony w działo kal. 40 mm i może przewozić 12 ludzi."
  SOV_APC_8_short: "Kurganiec-45"
- SOV_Heavy_Anti_tank_0: "BRDM-2 9P148 Konkurs"
+ SOV_Heavy_Anti_tank_0: "9P148 BRDM-2 Konkurs"
  SOV_Heavy_Anti_tank_0_desc: "Używany podczas wielu wojen i w wielu pojazdach. Efektywny zasięg wynosi 500-3000 m."
- SOV_Heavy_Anti_tank_1: "Konkurs MTB"
+ SOV_Heavy_Anti_tank_1: "9P149 Shturm-S"
  SOV_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może razić cele w promieniu 4 km i niszczyć największe czołgi wroga."
- SOV_Heavy_Anti_tank_2: "Kornet-E"
+ SOV_Heavy_Anti_tank_2: "9M123 Khrizantema"
  SOV_Heavy_Anti_tank_3: "Volk AT-22"
  SOV_Heavy_Anti_tank_4: "Volka AT-45"
  SOV_IFV_1: "BMP-1"
@@ -3826,7 +3820,7 @@
  SWE_IFV_7_short: "CV-110"
  SWE_IFV_8: "Pojazd bojowy 100"
  SWE_IFV_8_short: "CV-110"
- SWE_Anti_tank_0: "Karol Gustaw"
+ SWE_Anti_tank_0: "Carl Gustaf/M136"
  SWE_Anti_tank_1: "RBS 56 RACHUNEK"
  SWE_Anti_tank_2: "PRAWO MBT"
  SWE_MBT_1: "Stridsvagn 81"
@@ -4190,8 +4184,8 @@
  USA_IFV_7_short: "FFV-1"
  USA_IFV_8: "FFV-2"
  USA_IFV_8_short: "FFV-2"
- USA_Anti_tank_0: "M-72 PRAWO"
- USA_Anti_tank_1: "Supersmok M-47"
+ USA_Anti_tank_0: "M72 LAW"
+ USA_Anti_tank_1: "TOW"
  USA_Anti_tank_2: "Oszczep FGM-148"
  USA_Anti_tank_3: "Włócznia ogniowa FGM-246"
  USA_Anti_tank_4: "HEL-414"
@@ -8289,7 +8283,7 @@
  BSH_APC_8_short: "Kurganiec-45"
  BSH_Heavy_Anti_tank_0: "BRDM-2 9P148 Konkurs"
  BSH_Heavy_Anti_tank_0_desc: "Używany podczas wielu wojen i w wielu pojazdach. Efektywny zasięg wynosi 500-3000 m."
- BSH_Heavy_Anti_tank_1: "Konkurs MTB"
+ BSH_Heavy_Anti_tank_1: "Konkurs MTLB"
  BSH_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może razić cele w promieniu 4 km i niszczyć największe czołgi wroga."
  BSH_Heavy_Anti_tank_2: "Kornet-E"
  BSH_Heavy_Anti_tank_3: "Volk AT-22"
@@ -8390,7 +8384,7 @@
  CRM_APC_8_short: "Kurganiec-45"
  CRM_Heavy_Anti_tank_0: "BRDM-2 9P148 Konkurs"
  CRM_Heavy_Anti_tank_0_desc: "Używany w wielu wojnach i na wielu pojazdach. Efektywny zasięg wynosi 500-3000 m."
- CRM_Heavy_Anti_tank_1: "Konkurs MTB"
+ CRM_Heavy_Anti_tank_1: "Konkurs MTLB"
  CRM_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może uderzać w cele oddalone o 4 km i devasCRMe największe czołgi wroga."
  CRM_Heavy_Anti_tank_2: "Kornet-E"
  CRM_Heavy_Anti_tank_3: "Volk AT-22"
@@ -8570,7 +8564,7 @@
  TAT_APC_8_short: "Kurganiec-45"
  TAT_Heavy_Anti_tank_0: "BRDM-2 9P148 Konkurs"
  TAT_Heavy_Anti_tank_0_desc: "Używany podczas wielu wojen i w wielu pojazdach. Efektywny zasięg wynosi 500-3000 m."
- TAT_Heavy_Anti_tank_1: "Konkurs MTB"
+ TAT_Heavy_Anti_tank_1: "Konkurs MTLB"
  TAT_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może razić cele w promieniu 4 km i niszczyć największe czołgi wroga."
  TAT_Heavy_Anti_tank_2: "Kornet-E"
  TAT_Heavy_Anti_tank_3: "Volk AT-22"
@@ -8829,7 +8823,7 @@
  WAG_APC_8_short: "Kurganiec-45"
  WAG_Heavy_Anti_tank_0: "BRDM-2 9P148 Konkurs"
  WAG_Heavy_Anti_tank_0_desc: "Używany w wielu wojnach i na wielu pojazdach. Efektywny zasięg wynosi 500-3000 m."
- WAG_Heavy_Anti_tank_1: "Konkurs MTB"
+ WAG_Heavy_Anti_tank_1: "Konkurs MTLB"
  WAG_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może razić cele w promieniu 4 km i niszczyć największe czołgi wroga."
  WAG_Heavy_Anti_tank_2: "Kornet-E"
  WAG_Heavy_Anti_tank_3: "Volk AT-22"
@@ -8990,7 +8984,7 @@
  PMR_APC_5_short: "BTR-90"
  PMR_Heavy_Anti_tank_0: "BRDM-2 9P148 Konkurs"
  PMR_Heavy_Anti_tank_0_desc: "Używany podczas wielu wojen i w wielu pojazdach. Efektywny zasięg wynosi 500-3000 m."
- PMR_Heavy_Anti_tank_1: "Konkurs MTB"
+ PMR_Heavy_Anti_tank_1: "Konkurs MTLB"
  PMR_Heavy_Anti_tank_1_desc: "Cięższy system rakietowy wystrzeliwujący więcej niż jeden. Konkurs może razić cele w promieniu 4 km i niszczyć największe czołgi wroga."
  PMR_IFV_1: "BMP-1"
  PMR_IFV_1_desc: "BMP-1 to radziecki gąsienicowy bojowy wóz piechoty, amfibia. Używany podczas wojny radziecko-afgańskiej do transportu żołnierzy i walki z dżihadystami. Używając 73mm 2A28 i wyrzutni PPK."
@@ -9067,3 +9061,34 @@
  PMR_util_vehicle_2_desc: "Samochód ciężarowy przeznaczony do transportu zaopatrzenia i wojska, używany przez wiele armii na całym świecie."
  PMR_util_vehicle_3: "BPM-97"
  PMR_util_vehicle_3_desc: "Podobnie jak Volk, może on przenosić 8 średnich ładunków, ale może także przenosić na nich HMG. Służył do dowodzenia konwojami."
+ GER_Anti_tank_1_short: "Mediolan"
+ GER_Anti_tank_2_short: "MELLS Spike-LR"
+ GER_Anti_tank_3_short: "MAC"
+ GER_util_vehicle_0_short: "Jupiter"
+ GER_util_vehicle_3_short: "Wolf SSA"
+ DEN_infantry_weapons1: "Heckler & Koch M/66"
+ DEN_infantry_weapons1_short: "M/66"
+ DEN_infantry_weapons2: "Heckler & Koch M/75"
+ DEN_infantry_weapons2_short: "M/75"
+ DEN_infantry_weapons3: "Diemaco M/95"
+ DEN_infantry_weapons3_short: "M/95"
+ DEN_infantry_weapons4: "Diemaco M/10"
+ DEN_infantry_weapons4_short: "M/10"
+ DEN_infantry_weapons5: "HK416"
+ DEN_infantry_weapons5_short: "HK416"
+ DEN_infantry_weapons6: "HK416M 6.8"
+ DEN_infantry_weapons6_short: "HK416M 6.8"
+ DEN_infantry_weapons7: "AIF 40"
+ DEN_infantry_weapons7_desc: ""
+ NOR_infantry_weapons1: "AG3"
+ NOR_infantry_weapons1_short: "AG3"
+ NOR_infantry_weapons2_short: "AG3F1"
+ NOR_infantry_weapons3: "AG3F2"
+ NOR_infantry_weapons3_short: "AG3F2"
+ NOR_infantry_weapons4: "HK416N"
+ NOR_infantry_weapons4_short: "HK416N"
+ NOR_infantry_weapons5: "HK416A5N"
+ NOR_infantry_weapons5_short: "HK416A5N"
+ NOR_infantry_weapons6: "HK416NM 6.8"
+ NOR_infantry_weapons6_short: "HK416NM 6.8"
+ NOR_infantry_weapons7: "AIF 40"
