--- a/localisation/polish/loading_tips_l_polish.yml
+++ b/localisation/polish/loading_tips_l_polish.yml
@@ -142,7 +142,7 @@
  LOADING_TIP_140: "Powinniśmy nadal podążać ścieżką globalizacji. Globalizacja jest dobra… kiedy handel się zatrzymuje, nadchodzi wojna.\n– Jack Ma –"
  LOADING_TIP_141: "Ktokolwiek powiedział, że pióro jest potężniejsze od miecza, najwyraźniej nigdy nie spotkał się z bronią automatyczną.\n – Douglas MacArthur –"
  LOADING_TIP_142: "Kiedy złapiesz ich za jaja, ich serca i umysły podążą za tobą.\n – Chuck Colson –"
- LOADING_TIP_143: "Our plan will put America First. Americanism, not globalism, will be our creed. As long as we are led by politicians who will not put America First, then we can be assured that other nations will not treat America with respect.\n - Donald Trump -"
+ LOADING_TIP_143: "Nasz plan na pierwszym miejscu postawi Amerykę. Naszym credo będzie amerykanizm, a nie globalizm. Dopóki będą nami kierować politycy, którzy nie będą stawiać Ameryki na pierwszym miejscu, możemy być pewni, że inne narody nie będą traktować Ameryki z szacunkiem.\n – Donald Trump –"
  LOADING_TIP_144: "Kiedy polityka nie jest już misją, ale zawodem, politycy stają się bardziej egoistyczni niż urzędnicy państwowi.\n – Emmanuel Macron –"
  LOADING_TIP_145: "ONZ jest uznanym forum wyrażania międzynarodowej nienawiści.\n – Sir Humphrey Appleby –"
  LOADING_TIP_146: "Talibowie to nie armia północnowietnamska… W żadnym wypadku nie będzie widać ludzi podnoszonych z dachu ambasady Stanów Zjednoczonych z Afganistanu.\n – Prezydent Joe Biden –"
@@ -245,8 +245,8 @@
  LOADING_TIP_258: "Przyszłość to Afganistan.\n – Ashraf Ghani –"
  LOADING_TIP_259: "Nawet gdyby niebo było krótsze niż moje kolana, nie klękałbym.\n – Cyrus Wielki –"
  LOADING_TIP_260: "Jeśli siedzę cicho, zgrzeszyłem\n – Mohammed Mossadegh –"
- LOADING_TIP_261: "Nobody will ever return to 2007\n - Dmitry Medvedev -"
- LOADING_TIP_262: "If a fight is inevitable, go and fight first.\n - Vladimir Putin -"
- LOADING_TIP_263: "Comrades! We must abolish the cult of the individual decisively, once and for all.\n - Nikita Khrushchyov -"
- LOADING_TIP_264: "How can you govern the country with insects like this as part of your government?\n - Kim Jae-gyu, the assassination of South Korean President Park Chung-hee. -"
+ LOADING_TIP_261: "Nikt nigdy nie wróci do roku 2007\n – Dmitrij Miedwiediew -"
+ LOADING_TIP_262: "Jeśli walka jest nieunikniona, idź i walcz pierwszy.\n – Władimir Putin -"
+ LOADING_TIP_263: "Towarzysze! Musimy zdecydowanie i raz na zawsze zlikwidować kult jednostki.\n – Nikita Chruszczow -"
+ LOADING_TIP_264: "Jeśli będziemy kierować rządem za pomocą takich owadów, czy rząd będzie działał właściwie?\n – Kim Jae-gyu, zabójstwo prezydenta Korei Południowej Park Chung-hee. -"
  LOADING_TIP_265: "Nie ma czasu na wahanie, musimy mocno uderzyć!\n – Chun Doo-hwan, instrukcje dotyczące stłumienia incydentu związanego z demokracją w Gwangju. -"
