--- a/localisation/polish/plane_designer_l_polish.yml
+++ b/localisation/polish/plane_designer_l_polish.yml
@@ -228,12 +228,12 @@
  rocket_weapons_1_desc: "Wczesne zasobniki rakietowe umożliwiły samolotom szybką metodę atakowania celów z precyzyjnym nasyceniem głowic odłamkowo-burzących po znacznie tańszej cenie niż pociski kierowane."
  rocket_weapons_2: "Nowoczesne rakiety niekierowane"
  rocket_weapons_2_desc: "Bardziej precyzyjne rakiety i udoskonalenia głowic bojowych uczyniły te systemy uzbrojenia istotnym krokiem naprzód w stosunku do swoich wcześniejszych odpowiedników, a jednocześnie pozostały tanim i skutecznym sposobem zapewniania bliskiego wsparcia powietrznego i możliwości wykonywania misji uderzeniowych dla samolotów."
- countermeasures_1: "Wczesne środki zaradcze"
- countermeasures_1_desc: "Gdy rakiety wkroczyły na miejsce zdarzenia, samoloty potrzebowały sposobu na obronę przed atakiem, który nie polegałby na próbie prześcignięcia pocisku lub uniknięcia go. Plewy i flary stanowiły wabiki, które pozwalały pilotom próbować oszukać nadlatujące rakiety."
- countermeasures_2: "Nowoczesne środki zaradcze"
- countermeasures_2_desc: "W miarę jak komputery stawały się coraz inteligentniejsze i szybsze, automatyzacja niektórych zadań w samolocie stała się prostsza. Dzięki tym systemom samoloty mogą automatycznie uruchomić program mający na celu wdrożenie środków zaradczych w przypadku ataku, w optymalnym momencie, aby zmaksymalizować szanse na uniknięcie ataku."
- countermeasures_3: "Środki obronne w walce elektronicznej"
- countermeasures_3_desc: "W miarę jak walka BVR stała się królem, możliwość powstrzymania przeciwnika przed dostrzeżeniem Cię lub zablokowaniem stała się coraz ważniejsza. Moduły zakłócające i wewnętrzne urządzenia zakłócające umożliwiają samolotom powstrzymanie radaru wroga przed wykryciem lub zablokowaniem go poprzez wypełnienie jego radaru fałszywymi sygnałami zwrotnymi, co wymaga dużej ilości mocy do przepalenia."
+ countermeasures_1: "Countermeasures and early RWR"
+ countermeasures_1_desc: "As missiles jumped onto the scene, aircraft needed a way to defend themselves from attack that didn't rely on trying to just outrun or dodge a missile. Chaff and flares provided decoys that allowed pilots to attempt to deceive incoming missile threats while Radar Warning Receivers alerted the pilot when his plane was locked by a radar."
+ countermeasures_2: "Countermeasures and modern RWR"
+ countermeasures_2_desc: "While countermeasures didn't change much, modern RWR now display crucial information such as the type of radar, the distance. Modern missile warning systems can also deploy countermeasures automatically when detecting a missile."
+ countermeasures_3: "Electronic Warfare Suite"
+ countermeasures_3_desc: "Planes can now carry their own advanced eletronic warfare equipment without having to rely on dedicated jamming aircrafts. These powerful systems provide unparalleled protection against ever more lethal threats. Multispectrum flares provides further protection against modern IR missiles."
  countermeasures_4: "Laserowe, twarde środki zaradcze"
  countermeasures_4_desc: "W miarę jak coraz trudniej jest zwabić zagrożenie rakietowe, misja zmienia się z unikania na niszczenie. Systemy te montowane na samolotach wykorzystują lasery o dużej mocy, aby albo wyłączyć systemy naprowadzania nadlatującego pocisku, albo zdetonować głowicę, zanim dotrze ona do celu."
  rapid_dragon: "Paletyzowane ALCM"
@@ -523,12 +523,12 @@
  spec_thrust_vector_2_desc: "Systemy wektorowania ciągu zaprojektowane w celu zwiększenia manewrowości.\n\n§GWskazówka projektanta: użyj tego modułu, aby zwiększyć obronę przeciwlotniczą samolotu kosztem niezawodności. Zalecane, gdy chcesz stworzyć trwalszy samolot bez ponoszenia kosztów ukrywania się.§!"
  spec_thrust_vector_3: "Dwuosiowe wektorowanie ciągu"
  spec_thrust_vector_3_desc: "Zaawansowane wektorowanie ciągu, które umożliwia większą manewrowość na wielu osiach.\n\n§GWskazówka projektanta: użyj tego modułu, aby zwiększyć obronę przeciwlotniczą samolotu kosztem niezawodności. Zalecane, gdy chcesz stworzyć trwalszy samolot bez ponoszenia kosztów ukrywania się.§!"
- spec_countermeasures_1: "Wczesne środki zaradcze"
+ spec_countermeasures_1: "Countermeasures and early RWR"
  spec_countermeasures_1_desc: "Wczesne opcje obrony przed atakami rakietowymi.\n\n§GWskazówka projektanta: Całkowite zwiększenie statystyk obrony powietrznej samolotu. Zaleca się posiadanie na statku powietrznym co najmniej jednego modułu przeciwdziałania, zwłaszcza jeśli statek powietrzny nie jest wyposażony w żadne moduły stealth.§!"
- spec_countermeasures_2: "Nowoczesne środki zaradcze"
+ spec_countermeasures_2: "Countermeasures and modern RWR"
  spec_countermeasures_2_desc: "Nowoczesne plewy i flary.\n\n§GWskazówka projektanta: ogólne zwiększenie statystyk obrony powietrznej samolotu. Zaleca się posiadanie na statku powietrznym co najmniej jednego modułu przeciwdziałania, zwłaszcza jeśli statek powietrzny nie jest wyposażony w żadne moduły stealth.§!"
- spec_countermeasures_3: "Kapsuła zakłócająca radar"
- spec_countermeasures_3_desc: "EW Obrona przeciwrakietowa dla rakiet naprowadzanych radarowo.\n\n§GWskazówka projektanta: Całkowite zwiększenie statystyk obrony powietrznej samolotu wraz ze wzrostem przewagi radaru. Zaleca się posiadanie na statku powietrznym co najmniej jednego modułu przeciwdziałania, zwłaszcza jeśli statek powietrzny nie jest wyposażony w żadne moduły stealth.§!"
+ spec_countermeasures_3: "Electronic Warfare Suite"
+ spec_countermeasures_3_desc: "EW Suite.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat, along with an increase to radar advantage. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
  spec_countermeasures_4: "Laserowy system twardego zabijania"
  spec_countermeasures_4_desc: "Środki zaradcze Hard-Kill chroniące przed wszystkimi zagrożeniami rakietowymi.\n\n§GWskazówka projektanta: całkowite zwiększenie statystyk obrony powietrznej samolotu wraz ze wzrostem przewagi radaru. Zaleca się posiadanie na statku powietrznym co najmniej jednego modułu przeciwdziałania, zwłaszcza jeśli statek powietrzny nie jest wyposażony w żadne moduły stealth.§!"
  engine_light_single_1: "Wczesny lekki silnik"
