--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -82,7 +82,6 @@
  GER_rheinmetall_tank_manufacturer: "莱茵金属 - 装甲部门"
  GER_heckler_koch_materiel_manufacturer: "黑克勒&科赫"
  GER_airbus_defence_aircraft_manufacturer: "空中客车防务"
- GER_panavia_aircraft_manufacturer: "Panavia Aircraft Germany"
  GER_airbus_helicopters_tank_manufacturer: "空中客车直升机公司"
  GER_thyssenkrupp_marine_naval_manufacturer: "蒂森克虏伯海洋系统"
  GER_thyssenkrupp_marine_naval_manufacturer2: "蒂森克虏伯海洋系统"
@@ -288,3 +287,4 @@
  USA_textron_tank_manufacturer: "德事隆"
  USA_textron_aviation_defense_manufacturer: "德事隆空中防务"
  USA_general_dynamics_APC_manufacturer: "通用动力陆地系统-控制"
+ GER_panavia_aircraft_manufacturer: "德国帕那维亚飞机公司"
